CI images update

--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-07-22 16:32:07
+lastsearch = 2024-07-22 19:25:48
 
 [shopee.vn]
 match = -76.2%%
@@ -12,9 +12,9 @@ title = thảm trải giường loại 1 giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm trải giường loại 1
 
 [www.lazada.vn]
-match = -76.2%%
-title = Thảm Trải Giường Đa Năng. thảm nhung cao cấp trải ...
-url = https://www.lazada.vn/products/tham-trai-giuong-da-nang-tham-nhung-cao-cap-trai-giuong-am-ap-tang-kem-2-vo-goi-cung-loai-kt-16-x-2m-i872064502.html
+match = -128.6%%
+title = Ga trải giường chống thấm nước bảo vệ đệm hàng loại đẹp kích ...
+url = https://www.lazada.vn/products/ga-trai-giuong-chong-tham-nuoc-bao-ve-dem-hang-loai-dep-kich-thuoc-16-x-2m-ga-trai-giuong-chong-tham-nuoc-bao-ve-dem-hang-loai-dep-kich-thuoc-16x2m-i257442579.html
 
 [tiki.vn]
 match = -38.1%%
@@ -87,9 +87,9 @@ title = Đầu giường
 url = https://tonybed.com/dau-giuong/
 
 [www.sendo.vn]
-match = -76.2%%
-title = Thảm Chân Giường Siêu Chất, Giá Gốc, Hàng Mới Mỗi Ngày
-url = https://www.sendo.vn/tham-chan-giuong.htm
+match = -14.3%%
+title = thảm trải giường [Được kiểm hàng] 23162672
+url = https://www.sendo.vn/tham-trai-giuong-duo-c-kie-m-ha-ng-23162672-117151315.html
 
 [zatafu.com]
 match = -33.3%%
@@ -175,4 +175,14 @@ url = https://hoaphatsaigon.com/2426-giuong-tang-gtqp2.html
 match = -100.0%%
 title = Combo Bộ giường tủ phòng ngủ 402-16 - Noi That Hoa Phat
 url = https://noithathoaphat360.com/bo-giuong-tu-phong-ngu-40216-p35700531.html
+
+[intex.vn]
+match = -119.0%%
+title = Đệm hơi, giường hơi loại nào tốt nhất? 6 tiêu chí lựa chọn ...
+url = https://intex.vn/tin-tuc/dem-hoi-giuong-hoi-loai-nao-tot-nhat.html
+
+[websosanh.vn]
+match = -38.1%%
+title = Tham Nhung Trai Giuong: Nơi bán giá rẻ, uy ...
+url = https://websosanh.vn/s/tham+nhung+trai+giuong.htm
 
