--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-22 14:47:06
+lastsearch = 2024-07-22 19:25:59
 
 [tiki.vn]
 match = -138.9%%
@@ -17,9 +17,9 @@ title = Kích thước 160x200
 url = http://nemxinh.net/filter/chan-ga+160x200
 
 [www.everonvn.vn]
-match = -183.3%%
-title = Everon EPM-22060 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm22060.html
+match = -188.9%%
+title = Everon ESB-22054 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-esb22054.html
 
 [lavendervn.com]
 match = -22.2%%
@@ -32,9 +32,9 @@ title = Chổi Xể – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
 url = https://choixe.vn/
 
 [nemkimtrang.com]
-match = -144.4%%
-title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 713 - CHÍNH HÃNG ...
-url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-713-chinh-hang-cao-cap
+match = -72.2%%
+title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 743
+url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-743-chinh-hang-cao-cap
 
 [demxanh.com]
 match = -66.7%%
@@ -42,9 +42,9 @@ title = Bộ ga chun Cotton chống thấm màu xám đậm
 url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xam-dam.html
 
 [foreverbedding.net]
-match = -61.1%%
-title = Bộ ga phủ Silky G119 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-silky-g119
+match = -66.7%%
+title = Bộ ga phủ Passion A114 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-passion-a114
 
 [aeoneshop.com]
 match = -105.6%%
