--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-22 18:25:47
+lastsearch = 2024-07-22 19:24:09
 
 [tiki.vn]
 match = -47.6%%
@@ -17,9 +17,9 @@ title = Sau 4 ngày công chiếu tại Đài Loan,... - CGV Cinemas ...
 url = https://www.facebook.com/cgvcinemavietnam/posts/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844928247673947/
 
 [www.roc-taiwan.org]
-match = -19.0%%
-title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
-url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
+match = -42.9%%
+title = Thủ tục cấp đổi hộ chiếu cho người Đài Loan
+url = https://www.roc-taiwan.org/vn_vi/post/62.html
 
 [www.tiktok.com]
 match = -19.0%%
@@ -112,9 +112,9 @@ title = Ăn cơm Đài Loan, thờ ma Trung Cộng
 url = https://www.nguoi-viet.com/binh-luan/an-com-dai-loan-tho-ma-trung-cong/
 
 [trithucvn.co]
-match = -123.8%%
-title = Đài Loan và Nhật Bản hợp tác kêu gọi toàn cầu chống thu ...
-url = https://trithucvn.co/the-gioi/dai-loan-va-nhat-ban-hop-tac-keu-goi-toan-cau-chong-thu-hoach-noi-tang.html
+match = -95.2%%
+title = Chuyên gia Đài Loan: 4 nguyên nhân đích thân ông Tập ...
+url = https://trithucvn.co/the-gioi/chuyen-gia-dai-loan-4-nguyen-nhan-dich-than-ong-tap-vieng-ong-nguyen-phu-trong.html
 
 [www.vietnamplus.vn]
 match = -119.0%%
