--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-22 18:45:45
+lastsearch = 2024-07-22 19:31:12
 
 [www.georgianicols.com]
 match = -192.3%%
@@ -32,9 +32,9 @@ title = Japanese spider crab
 url = https://en.wikipedia.org/wiki/Japanese_spider_crab
 
 [www.facebook.com]
-match = -84.6%%
-title = 3:16 Healthcare | Bremen GA
-url = https://www.facebook.com/316Healthcare/
+match = -215.4%%
+title = MIGHTY CEE NETWORK NEWS WITH GANI ORO 07/16/24 ...
+url = https://www.facebook.com/KFiveZambales/videos/mighty-cee-network-news-with-gani-oro-071624mighty-cee-network-news-with-gani-or/1017416253436489/
 
 [www.youtube.com]
 match = -146.2%%
@@ -117,9 +117,9 @@ title = States that have Adopted California's Vehicle Regulations
 url = https://ww2.arb.ca.gov/our-work/programs/advanced-clean-cars-program/states-have-adopted-californias-vehicle-regulations
 
 [www.deutschconnectorstore.com]
-match = -253.8%%
-title = 0462-201-16141 | Deutsch/TE | SIze 16 Contact 20-16 Ga
-url = https://www.deutschconnectorstore.com/p-79-deutsch-0462-201-16141-contact-20-16-ga.html
+match = -200.0%%
+title = Deutsch 0460-202-16141 Size 16 Contact 16-20 Ga
+url = https://www.deutschconnectorstore.com/p-70-deutsch-0460-202-16141-contact-20-16-ga.html
 
 [www.saflii.org]
 match = -200.0%%
