--- a/images/tui-tuan-anh-180x200/config.ini
+++ b/images/tui-tuan-anh-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-tuan-anh-180x200.html
 lastopen = 2024-06-17 10:42:51
 
 [search]
-lastsearch = 2024-07-22 17:34:49
+lastsearch = 2024-07-22 19:32:07
 
 [www.diepxuan.com]
 match = 26.3%%
@@ -17,19 +17,19 @@ title = Đệm Lò xo túi Adaptive Tuấn Anh
 url = https://demkhangduy.com/dem-lo-xo-tui-adaptive-tuan-anh
 
 [demxanh.com]
-match = -100.0%%
-title = Đệm lò xo túi Tuấn Anh Adaptive Pocket (Cuộn) dày 25cm
-url = https://demxanh.com/dem-lo-xo-tui-tuan-anh-adaptive-pocket-cuon.html
+match = 10.0%%
+title = Đệm lò xo túi Tuấn Anh Adaptive
+url = https://demxanh.com/dem-lo-xo-tui-tuan-anh-adaptive.html
 
 [tuananh.vn]
 match = 10.0%%
-title = LÒ XO TÚI RUBY MERRY
-url = https://tuananh.vn/lo-xo-tui-ruby-merry-p445.html
+title = LÒ XO TÚI RUBY POTENCY
+url = https://tuananh.vn/site/Product/446?name=lo-xo-tui-ruby-potency
 
 [dem24h.vn]
-match = -35.0%%
-title = Đệm Lò Xo Túi Cuộn Adaptive Tuấn Anh
-url = https://dem24h.vn/dem-lo-xo-tui-cuon-adaptive-tuan-anh
+match = 20.0%%
+title = Đệm Lò Xo Tuấn Anh Raina
+url = https://dem24h.vn/dem-lo-xo-tui-raina-korea
 
 [demviethome.vn]
 match = -140.0%%
@@ -62,12 +62,17 @@ title = Explicit poets [V0y26d]
 url = https://www.middlesex.mass.edu/templateinframes/?Site=Help&Url=https://xn--80aboyjk.xn--p1ai/njhwzet7vah4m01-173333ytcomamafe85
 
 [demtot.com]
-match = -15.0%%
-title = Đệm Lò Xo Túi Màu Cân Bằng Nhiệt
-url = https://demtot.com/dem-lo-xo-adaptive-tui-mau/
+match = 20.0%%
+title = Đệm lò xo Tuấn Anh TRACY
+url = https://demtot.com/dem-lo-xo-tuan-anh-tracy/
 
 [www.instagram.com]
 match = -95.0%%
 title = Instagram photo by Tuan Anh • Nov 14, 2023 at 6:36 AM
 url = https://www.instagram.com/tuaananhh_/p/CzoUsDqPmjD/?next=/accounts/edit/
+
+[www.facebook.com]
+match = 5.0%%
+title = LEO | Ho Chi Minh City
+url = https://www.facebook.com/kingnect.entertainment/?locale=en_GB
 
