--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-07-22 11:44:28
+lastsearch = 2024-07-22 19:59:24
 
 [bedding.vn]
 match = -123.1%%
@@ -12,9 +12,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16
 url = https://bedding.vn/chan-ga-goi-song-hong-uc16/
 
 [changagoidemsonghong.com]
-match = -46.2%%
-title = Chăn ga gối Home mã H16-038
-url = https://changagoidemsonghong.com/chan-ga-goi-home-h16-038
+match = -184.6%%
+title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
+url = https://changagoidemsonghong.com/chan-ga-goi-bc16
 
 [songhonghanoi.vn]
 match = -176.9%%
@@ -37,9 +37,9 @@ title = Chun Lu
 url = https://scholar.google.co.uk/citations?user=ufM1QgQAAAAJ&hl=th
 
 [www.linkedin.com]
-match = -230.8%%
-title = Joanne Chun - University of California, San Francisco
-url = https://www.linkedin.com/in/joanne-k-chun
+match = -176.9%%
+title = Alicia Chun - Atlanta, Georgia, United States
+url = https://www.linkedin.com/in/alicia-chun-3a385315a
 
 [hanvico.com.vn]
 match = -69.2%%
@@ -47,8 +47,8 @@ title = HANVICO - ẤM ÁP NHƯ LÒNG MẸ
 url = https://hanvico.com.vn/
 
 [demthienkim.com]
-match = -123.1%%
-title = Chăn ga gối Sông Hồng Urban mã mầu UC16
+match = -246.2%%
+title = Chăn ga gối Sông Hồng Urban mã mầu UC16 - Đệm Thiên Kim
 url = https://demthienkim.com/chan-ga-goi-song-hong-uc16/
 
 [foreverbedding.net]
@@ -365,4 +365,9 @@ url = https://linlab.phhp.ufl.edu/news/
 match = 0.0%%
 title = 
 url = https://www.google.com/search?sca_esv=82aa2a2e266d6057&sca_upv=1&q=What+type+of+school+is+SJSU?&sa=X&ved=2ahUKEwjejJbkgbWHAxVgv4kEHRskBswQsZYEegQIGhAC
+
+[csm.fresnostate.edu]
+match = -376.9%%
+title = Pei-Chun Ho, Ph. D. - College of Science and Mathematics - Fresno ...
+url = https://csm.fresnostate.edu/physics/documents/cvbiopch.pdf
 
