--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-22 18:51:35
+lastsearch = 2024-07-22 19:58:18
 
 [www.zillow.com]
 match = -69.2%%
@@ -582,7 +582,7 @@ title = Catawba County
 url = https://www.catawbacountync.gov/
 
 [www.prowireusa.com]
-match = -169.2%%
-title = Deutsch 0460-202-20141 |TE CONNECTIVITY
-url = https://www.prowireusa.com/p-72-deutsch-0460-202-20141-contact-22-18-ga.html
+match = -192.3%%
+title = Deutsch 0462-201-20141 Size20 Contact 22-18 Ga
+url = https://www.prowireusa.com/p-81-deutsch-0462-201-20141-contact-22-18-ga.html
 
