--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-07-22 19:59:24
+lastsearch = 2024-07-22 20:27:12
 
 [bedding.vn]
 match = -123.1%%
@@ -12,9 +12,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16
 url = https://bedding.vn/chan-ga-goi-song-hong-uc16/
 
 [changagoidemsonghong.com]
-match = -184.6%%
-title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
-url = https://changagoidemsonghong.com/chan-ga-goi-bc16
+match = -46.2%%
+title = Chăn ga gối Home mã H16-038
+url = https://changagoidemsonghong.com/chan-ga-goi-home-h16-038
 
 [songhonghanoi.vn]
 match = -176.9%%
@@ -37,9 +37,9 @@ title = Chun Lu
 url = https://scholar.google.co.uk/citations?user=ufM1QgQAAAAJ&hl=th
 
 [www.linkedin.com]
-match = -176.9%%
-title = Alicia Chun - Atlanta, Georgia, United States
-url = https://www.linkedin.com/in/alicia-chun-3a385315a
+match = -230.8%%
+title = Joanne Chun - University of California, San Francisco
+url = https://www.linkedin.com/in/joanne-k-chun
 
 [hanvico.com.vn]
 match = -69.2%%
@@ -370,4 +370,9 @@ url = https://www.google.com/search?sca_esv=82aa2a2e266d6057&sca_upv=1&q=What+ty
 match = -376.9%%
 title = Pei-Chun Ho, Ph. D. - College of Science and Mathematics - Fresno ...
 url = https://csm.fresnostate.edu/physics/documents/cvbiopch.pdf
+
+[www.reddit.com]
+match = -115.4%%
+title = Snowdrop [Episode 16] : r/KDRAMA
+url = https://www.reddit.com/r/KDRAMA/comments/sg8nap/snowdrop_episode_16/
 
