--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-22 18:16:58
+lastsearch = 2024-07-22 20:20:21
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -42,9 +42,9 @@ title = I am a 19-year-old male. My chest size is 38, waist 36 bicep ...
 url = https://www.quora.com/I-am-a-19-year-old-male-My-chest-size-is-38-waist-36-bicep-12-weight-73-kg-and-BMI-23-What-would-I-have-to-do-to-get-to-a-32-waist
 
 [books.google.com]
-match = -228.6%%
-title = ALLGEMEINE LITERATUR-ZEITUNG VOM JAHRE 1792: JANUAR, ...
-url = https://books.google.com/books?id=qY7cFBbXMqAC&pg=PA203&lpg=PA203&dq=man+re+xanh+16&source=bl&ots=yxHBAVsM20&sig=ACfU3U1QLrfWzBCR75LdQrv5KYkVCwKT-Q&hl=en&sa=X&ved=2ahUKEwiG0qrJl7iHAxU2GzQIHZYyA-sQ6AF6BAgfEAM
+match = -307.1%%
+title = Lexicon Aethiopico-Latinum ... Accessit Authoris Grammatica, ...
+url = https://books.google.com/books?id=8etMAAAAcAAJ&pg=PA9&lpg=PA9&dq=man+re+xanh+16&source=bl&ots=Wr-Eq4o9Xq&sig=ACfU3U2HUtjPwnmhH35dsW566EvB2ymJkQ&hl=en&sa=X&ved=2ahUKEwi2neXB3rqHAxX2H0QIHd10AowQ6AF6BAgbEAM
 
 [mobilecity.vn]
 match = -207.1%%
