--- a/images/ruot-nem-korea-140x190x09/config.ini
+++ b/images/ruot-nem-korea-140x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-140x190x09.html
 lastopen = 2024-06-11 23:28:41
 
 [search]
-lastsearch = 2024-07-22 20:00:30
+lastsearch = 2024-07-22 20:21:32
 
 [www.riotgames.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title =
 url = https://www.linkedin.com/pulse/how-get-job-korea-non-korean-again-ross-harman
 
 [www.youtube.com]
-match = -48.0%%
-title = MN D90 Crawler 1/12 Wish german unboxing # 94
-url = https://www.youtube.com/watch?v=cnpx6vFDAqU
+match = -64.0%%
+title = EXTENSIVE TOUR OF ALL THE BEST FOOD IN SEOUL ...
+url = https://www.youtube.com/watch?v=VnDxsqL5AuE
 
 [www.diepxuan.com]
 match = 60.0%%
