CI images update

--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-22 17:37:08
+lastsearch = 2024-07-22 20:33:17
 
 [shopee.vn]
 match = 25.0%%
@@ -67,9 +67,9 @@ title = Kỹ Thuật Trồng Lạc (Đậu Phộng) Vụ Xuân
 url = https://sonnptnt.thaibinh.gov.vn/tin-tuc-su-kien/tu-sach-nha-nong/ky-thuat-trong-lac-dau-phong-vu-xuan.html
 
 [www.youtube.com]
-match = -187.5%%
-title = 12 Động Tác Xoa Mặt - Diện Chẩn Bùi Quốc Châu | G.V ...
-url = https://www.youtube.com/watch?v=1qymgQonDEU
+match = -162.5%%
+title = VÌ SAO Ả-RẬP KHÔNG VUNG TIỀN MUA CẦU THỦ NHIỀU ...
+url = https://www.youtube.com/watch?v=LtEmGn_miPo
 
 [vuihoc.vn]
 match = -187.5%%
@@ -77,9 +77,9 @@ title = Con Lắc Đơn Là Gì? Công Thức, Vận Tốc, Chu Kỳ Và Tần S
 url = https://vuihoc.vn/tin/thpt-con-lac-don-1139.html
 
 [baomoi.com]
-match = -193.8%%
-title = Chứng khoán 12/7: Thị trường 'rung lắc', bất ngờ một cổ ...
-url = https://baomoi.com/chung-khoan-12-7-thi-truong-rung-lac-bat-ngo-mot-co-phieu-duoc-pham-lien-tuc-vuot-dinh-c49614937.epi
+match = -106.2%%
+title = Barca muốn chiêu mộ 'máy quét' N'Golo Kante
+url = https://baomoi.com/barca-muon-chieu-mo-may-quet-n-golo-kante-c49701372.epi
 
 [nhathuoclongchau.com.vn]
 match = -200.0%%
@@ -220,4 +220,14 @@ url = https://cafef.vn/vua-nhan-giay-bao-do-vao-dh-top-dau-nam-sinh-lap-tuc-chay
 match = -193.8%%
 title = Thông cáo đặc biệt về Lễ tang Tổng Bí thư Nguyễn Phú ...
 url = https://vovgiaothong.vn/newsaudio/thong-cao-dac-biet-ve-le-tang-tong-bi-thu-nguyen-phu-trong-d39880.html
+
+[znews.vn]
+match = -187.5%%
+title = Joao Felix tìm thấy lối thoát cho sự nghiệp - Thể thao
+url = https://znews.vn/joao-felix-tim-thay-loi-thoat-cho-su-nghiep-post1487634.html
+
+[www.google.com]
+match = -112.5%%
+title = maps/@21.001139,105.847882,17z?hl=vi
+url = https://www.google.com/maps/@21.001139,105.847882,17z?hl=vi
 
