--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-22 20:24:40
+lastsearch = 2024-07-22 20:38:23
 
 [www.amazon.com]
 match = -309.1%%
@@ -28,7 +28,7 @@ url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [noithathoaphat.com]
 match = -309.1%%
-title = Ghế xoay da trưởng phòng - SG903 - Nội Thất Hòa Phát
+title = Ghế xoay da trưởng phòng - SG903 - Nội thất Hòa Phát
 url = https://noithathoaphat.com/ghe-da-truong-phong-sg903
 
 [dandoxe.com]
