--- a/images/tham-giuong-loai-2-15/config.ini
+++ b/images/tham-giuong-loai-2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-15.html
 lastopen = 2024-06-07 00:36:25
 
 [search]
-lastsearch = 2024-07-22 17:41:47
+lastsearch = 2024-07-22 20:37:02
 
 [shopee.vn]
 match = -57.1%%
@@ -17,9 +17,9 @@ title = Thảm Lót Chân Giường Lớn 80cm x 2 mét (15)
 url = https://khosibaclieu.com/tham-lot-chan-giuong-lon-80cm-x-2-met-15
 
 [www.sendo.vn]
-match = -47.6%%
-title = Thảm Nhung Trải Giường [Được kiểm hàng] 22696512
-url = https://www.sendo.vn/tham-nhung-trai-giuong-duo-c-kie-m-ha-ng-22696512-117151559.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1721174400325_undefined_-1_cateLvl2_0_56_23_-1
+match = -76.2%%
+title = Thảm Chân Giường Siêu Chất, Giá Gốc, Hàng Mới Mỗi Ngày
+url = https://www.sendo.vn/tham-chan-giuong.htm
 
 [tiki.vn]
 match = -38.1%%
