--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-22 17:49:52
+lastsearch = 2024-07-22 20:38:11
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -22,9 +22,9 @@ title = Bộ chăn ga gối đệm Cotton poly đáng yêu Mẫu 16 - Nắng Sto
 url = https://nangstore.vn/bo-chan-ga-goi-de-m-cotton-poly-da-ng-yeu-ma-u-16
 
 [chanrathanhthuy.com]
-match = 50.0%%
-title = Chăn ga gối đệm giá rẻ
-url = https://chanrathanhthuy.com/tin-tuc/chan-ga-goi-dem-gia-re-1209.html
+match = 25.0%%
+title = 10 bộ chăn ga gối đệm tencel đẹp nhất
+url = https://chanrathanhthuy.com/tin-tuc/10-bo-chan-ga-goi-dem-tencel-dep-nhat-714.html
 
 [myhunggia.com]
 match = -4.2%%
@@ -37,9 +37,9 @@ title = BỘ GA THUN LẠNH LỤA (THUN Ý 5D) GIÁ RẺ - VẢI MÁT MỊN
 url = https://olbedding.com/product/bo-ga-thun-lanh-lua-mat-min-mau-de-thuong-cho-be-mau-so-16/
 
 [songhonghanoi.vn]
-match = -33.3%%
-title = Bộ chăn ga gối Sông Hồng HOME COLLECTION H16 036 ...
-url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-h16036-ga-phu.html
+match = -8.3%%
+title = Bộ Chăn Ga Gối Sông Hồng Tencel S16 01 Ga Chun
+url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-tencel-s1601-ga-chun.html
 
 [cuahangchangagoidem.com]
 match = -45.8%%
@@ -82,9 +82,9 @@ title = {1}Bộ ga thun 4 món 16 màu drap giường thun lạnh Hàn ...
 url = https://shopee.vn/-1-Bộ-ga-thun-4-món-16-màu-drap-giường-thun-lạnh-Hàn-Quốc-i.11438690.167422602
 
 [demxanh.com]
-match = 20.8%%
-title = Chăn ga gối cotton Notag 4 món 16
-url = https://demxanh.com/chan-ga-goi-cotton-notag-4-mon-16.html
+match = -54.2%%
+title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối đệm màu tối đẹp ...
+url = https://demxanh.com/chan-ga-goi-dem-mau-toi.html
 
 [changagoibenlinda.com]
 match = -12.5%%
