--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-07-22 20:21:50
+lastsearch = 2024-07-22 20:37:46
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối 100%% cotton mã mầu BC22-061
 url = https://changagoidemsonghong.com/chan-ga-goi-bc61
 
 [songhong.info]
-match = -16.7%%
-title = Mẫu chăn ga gối 100%% cotton mã mầu BC22-067
-url = https://songhong.info/chan-ga-goi-bc67
+match = -33.3%%
+title = Nơi cung cấp chăn ga gối Sông Hồng Basic mã BC22
+url = https://songhong.info/chan-ga-goi-bc22
 
 [hanvico.com.vn]
 match = 41.7%%
@@ -28,8 +28,8 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv22/
 
 [www.everonvn.vn]
 match = -87.5%%
-title = Everon EPC-22046 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epc22046.html
+title = Everon EPM-22069 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm22069.html
 
 [songhongchinhhang.vn]
 match = 0.0%%
