--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-22 19:24:23
+lastsearch = 2024-07-22 20:37:58
 
 [tiki.vn]
 match = 16.0%%
@@ -42,9 +42,9 @@ title = Văn Phòng Kinh Tế và Văn Hóa Đài Bắc tại TP. Hồ Chí Minh
 url = https://www.roc-taiwan.org/vnsgn_vi/index.html
 
 [books.google.com]
-match = -40.0%%
-title = Văn Mẫu Lớp 12 (Tập 4) - Google Books Result
-url = https://books.google.com/books?id=mUwIEQAAQBAJ&pg=PT593&lpg=PT593&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=K6Fxo5kTig&sig=ACfU3U1b-M8OzCZ_GVWTPypEMx_8omBLxw&hl=en&sa=X&ved=2ahUKEwjNw-KF6bmHAxV4vokEHXhoAQUQ6AF6BAgaEAM
+match = -44.0%%
+title = Hôi Úc Tình Yêu - Page 61 - Google Books Result
+url = https://books.google.com/books?id=q8yhDgAAQBAJ&pg=PA61&lpg=PA61&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=vxrAub1FLP&sig=ACfU3U0CTFzmBmxVosfAOivHWiGG8JoONw&hl=en&sa=X&ved=2ahUKEwi91Ou54rqHAxXev4kEHTHNBmUQ6AF6BAgZEAM
 
 [www.skyscanner.com.vn]
 match = -48.0%%
