--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-22 17:52:54
+lastsearch = 2024-07-22 20:34:26
 
 [www.tiktok.com]
 match = -170.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -158.8%%
-title = The Monthly Army List - Page 23 - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdmlg92kV&sig=ACfU3U2yFeicEH1P9ae64rEtW-smKUwi3g&hl=en&sa=X&ved=2ahUKEwjquLzHvbqHAxWMEGIAHdXTDzkQ6AF6BAgZEAM
+match = -194.1%%
+title = Bradshaw's General Railway and Steam Navigation Guide for ...
+url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+16&source=bl&ots=rUQ5CtEz73&sig=ACfU3U3VnVB605h9vYmZDU76uwI2HegOBQ&hl=en&sa=X&ved=2ahUKEwj7sc_U4bqHAxWol4kEHQtzAiEQ6AF6BAg4EAM
 
 [tax.vermont.gov]
 match = -29.4%%
