--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-14.html
 lastopen = 2024-06-17 10:43:32
 
 [search]
-lastsearch = 2024-07-22 19:24:36
+lastsearch = 2024-07-22 20:39:06
 
 [suongtuyet.com]
-match = -4.0%%
-title = Nệm Gòn Ép Tuấn Anh Korea Plus Vải Gấm
-url = https://suongtuyet.com/nem-gon-ep-tuan-anh-korea-plus-vai-gam
+match = 16.0%%
+title = Nệm Bông Ép Tuấn Anh Korea Cotton
+url = https://suongtuyet.com/nem-bong-ep-tuan-anh-korea-kaki
 
 [tuananh.vn]
 match = 8.0%%
@@ -67,9 +67,9 @@ title = đệm tuấn anh
 url = https://www.demgiare.net/tag/dem-tuan-anh
 
 [sieuthidemonline.vn]
-match = -60.0%%
-title = Đệm Tuấn Anh - thương hiệu đệm hàng đầu tại Việt Nam!
-url = https://sieuthidemonline.vn/dem-tuan-anh/
+match = -24.0%%
+title = Giá khuyến mại đệm bông ép Korea Kaki cao cấp
+url = https://sieuthidemonline.vn/dem-bong-ep-korea-kaki/
 
 [www.youtube.com]
 match = -56.0%%
