--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-07-22 17:49:19
+lastsearch = 2024-07-22 20:32:57
 
 [www.lazada.vn]
-match = -181.2%%
-title = 2023 Túi Ngủ Cho Bé Mẫu Xuân Thu Đông Nhiệt Độ Ổn ...
+match = -212.5%%
+title = 2023 Túi Ngủ Cho Bé Mẫu Xuân Thu Đông Nhiệt Độ Ổn Định ...
 url = https://www.lazada.vn/products/2023-tui-ngu-cho-be-mau-xuan-thu-dong-nhiet-do-on-dinh-cotton-nguyen-chat-bon-mua-thong-dung-cho-be-so-sinh-chong-da-chan-bong-chia-doi-chan-tui-ngu-cho-be-i2412995900.html
 
 [shopee.vn]
@@ -177,8 +177,8 @@ title = kids' handle it lightning bolt rain boot - Crocs Kids Handle It Rain ...
 url = https://m.veryberryfrozenyogurt.com/blogs/mjaprkvo-147/
 
 [mechanicaldesign-job.com]
-match = -231.2%%
-title = delta checked bag policy military - mechanicaldesign-job.com
+match = -31.2%%
+title = checked bag policy delta
 url = https://mechanicaldesign-job.com/products/tqqvnqki-195/
 
 [www.instagram.com]
