CI images update

--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-22 17:18:20
+lastsearch = 2024-07-22 20:51:14
 
 [www.facebook.com]
 match = -141.2%%
@@ -62,9 +62,9 @@ title = Ranliang Hu - Profile | Emory School of Medicine
 url = https://med.emory.edu/departments/radiology/profile/?u=RHU24
 
 [faculty.mdanderson.org]
-match = -17.6%%
-title = Philip L. Lorenzi, Ph.D.
-url = https://faculty.mdanderson.org/profiles/philip_lorenzi.html
+match = -8.3%%
+title = Andy Futreal
+url = https://faculty.mdanderson.org/profiles/andrew_futreal.html
 
 [pfas-1.itrcweb.org]
 match = -17.6%%
@@ -167,9 +167,9 @@ title = Xinyang Mao Jian Green Tea of Henan
 url = https://yunnansourcing.com/products/xinyang-mao-jian-green-tea-of-henan
 
 [pubs.acs.org]
-match = -200.0%%
-title = Enhancement of Local Osseointegration and Implant Stability ...
-url = https://pubs.acs.org/doi/10.1021/acsomega.4c02322
+match = -152.9%%
+title = Inorganic Chemistry Ahead of Print - ACS Publications
+url = https://pubs.acs.org/toc/inocaj/0/0
 
 [www.feinberg.northwestern.edu]
 match = -170.6%%
@@ -250,4 +250,9 @@ url = https://gskpro.com/content/dam/global/hcpportal/en_US/Prescribing_Informat
 match = -35.3%%
 title = Junhao Mao PhD - UMass Profiles
 url = https://profiles.umassmed.edu/display/129943
+
+[ehp.niehs.nih.gov]
+match = -182.4%%
+title = Urinary, Circulating, and Tissue Biomonitoring Studies ...
+url = https://ehp.niehs.nih.gov/0901716
 
