--- a/images/chieu-dieu-hoa-cao-su-120x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-120x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-120x190.html
 lastopen = 2024-06-06 16:55:18
 
 [search]
-lastsearch = 2024-07-22 20:33:42
+lastsearch = 2024-07-22 20:51:26
 
 [demxanh.com]
 match = 34.5%%
@@ -32,9 +32,9 @@ title = Chiếu điều hòa cao su non Tencel hồng đất - Chăn ga gối đ
 url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-hong-dat.html
 
 [thegioidemonline.com]
-match = 20.7%%
-title = Chiếu điều hòa cao su non Tencel màu vàng đậm
-url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
+match = 34.5%%
+title = Chiếu điều hòa cao su non Tencel Xanh nhạt
+url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
 
 [khodem.vn]
 match = 55.2%%
