--- a/images/chieu-nhua-ha-noi-du-lich-180x400/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-180x400/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x400.html
 lastopen = 2024-06-07 00:22:51
 
 [search]
-lastsearch = 2024-07-22 20:22:37
+lastsearch = 2024-07-22 20:47:01
 
 [www.diepxuan.com]
-match = 48.5%%
-title = Chiếu nhựa Hà Nội 180x300 - Điệp Xuân
+match = 42.4%%
+title = Điệp Xuân Chiếu nhựa Hà Nội 180x300
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-180x300.html
 
 [shopee.vn]
@@ -95,4 +95,9 @@ url = https://trangvangvietnam.com/categories/490435/chieu-nam-(chieu-tre-chieu-
 match = -18.2%%
 title = Chieu Cave - All You Need to Know BEFORE You Go (2024)
 url = https://en.tripadvisor.com.hk/Attraction_Review-g1652592-d13161996-Reviews-or10-Chieu_Cave-Mai_Chau_Mai_Chau_District_Hoa_Binh_Province.html
+
+[thietbicaocapacm.com]
+match = 3.8%%
+title = thùng rác nhựa công nghiệp
+url = https://thietbicaocapacm.com/category/thung-rac-nhua-cong-nghiep
 
