--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-22 16:21:53
+lastsearch = 2024-07-22 20:44:12
 
 [www.galottery.com]
-match = -38.5%%
-title = Fantasy 5 - Draw Games
+match = -7.7%%
+title = Fantasy 5 - Games
 url = https://www.galottery.com/en-us/games/draw-games/fantasy-five.html
 
 [www.instagram.com]
