--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-07-22 17:35:42
+lastsearch = 2024-07-22 21:17:36
 
 [shopee.vn]
-match = 35.3%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = 0.0%%
+title = Chiếu điều hòa cao su non - Giá Tốt, Miễn Phí Vận Chuyển ...
+url = https://shopee.vn/list/chiếu điều hòa/cao su non
 
 [olbedding.com]
 match = 11.8%%
