--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-22 16:50:08
+lastsearch = 2024-07-22 21:20:13
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -53,8 +53,8 @@ url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-ra
 
 [books.google.com]
 match = -142.9%%
-title = A critical pronouncing dictionary. With a suppl., by E. Smith
-url = https://books.google.com/books?id=cHoCAAAAQAAJ&pg=RA11-PA13&lpg=RA11-PA13&dq=nem+di+a+mon+9f+16+re&source=bl&ots=ubvki8FE2X&sig=ACfU3U3Dv1JrJr9cGgLUr6fByzHqLqw7jw&hl=en&sa=X&ved=2ahUKEwiY97zDr7qHAxVJkO4BHXfkBzMQ6AF6BAgaEAM
+title = The queen's printers' aids to the student of the holy Bible. ...
+url = https://books.google.com/books?id=dVBbAAAAQAAJ&pg=RA2-PA2&lpg=RA2-PA2&dq=nem+di+a+mon+9f+16+re&source=bl&ots=NeDC4Apotz&sig=ACfU3U3vbs4bzvefc73d8rHxWzFsP0uCiA&hl=en&sa=X&ved=2ahUKEwiOu8fy67qHAxXYDHkGHQaFCXkQ6AF6BAhGEAM
 
 [www.diepxuan.com]
 match = -81.0%%
