--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-07-22 20:32:16
+lastsearch = 2024-07-22 21:16:28
 
 [www.everonvn.vn]
-match = 31.1%%
-title = Đệm lò xo King Koil Cloud Firm | Giảm giá 20%%
-url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Cloud-Firm.html
+match = -16.7%%
+title = Đệm lò xo Everon Posture
+url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Posture.html
 
 [demxanh.com]
 match = 29.8%%
@@ -17,9 +17,9 @@ title = Đệm lò xo KingKoil Cloud Firm dày 27cm chính hãng
 url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html
 
 [nemragoi.com]
-match = 37.9%%
-title = Nệm lò xo Kingkoil Cloud Firm
-url = https://nemragoi.com/nem-lo-xo-kingkoil-cloud-firm.html
+match = 24.2%%
+title = Nệm lò xo Kingkoil Cloud Euro Top
+url = https://nemragoi.com/nem-lo-xo-kingkoil-cloud-euro-top.html
 
 [everonkorea.com]
 match = 31.8%%
@@ -52,9 +52,9 @@ title = Nệm lò xo Everon Kingkoil Cloud Firm 180x200x27
 url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html
 
 [everon.online]
-match = 31.9%%
-title = Đệm Lò Xo King Koil - Bảng Giá Các Sản Phẩm ...
-url = https://everon.online/collections/dem-lo-xo-king-koil
+match = 25.5%%
+title = Bảng Giá Đệm Lò Xo Everon, Đệm Lò Xo Mỹ King Koil ...
+url = https://everon.online/collections/dem-lo-xo-everon
 
 [everonvn.com.vn]
 match = 25.6%%
