--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-22 20:39:57
+lastsearch = 2024-07-22 21:18:09
 
 [www.lazada.vn]
-match = -61.1%%
-title = Orangesky Cần Câu Cá Biển Yuantou ...
-url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
+match = -88.9%%
+title = Nệm Siêu Nhẹ Giá Tốt T07/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/nem-sieu-nhe/
 
 [www.facebook.com]
-match = -27.8%%
-title = Siêu Thị Nệm | Ho Chi Minh City
-url = https://www.facebook.com/sieuthinem/
+match = -33.3%%
+title = Nem Nướng
+url = https://www.facebook.com/p/Nem-Nướng-100054522756775/
 
 [thegioinem.com]
 match = -105.6%%
@@ -32,9 +32,9 @@ title = Nệm cao su, gối, giường, salon | Kymdan - Website chính hãng
 url = https://www.kymdan.com/
 
 [www.youtube.com]
-match = -144.4%%
-title = Chuẩn VỊ NEM NƯỚNG, Bí quyết làm Nem Nướng Viên dai ...
-url = https://www.youtube.com/watch?v=C58Hlp6UXfQ
+match = -133.3%%
+title = Cách làm NEM CÔNG CHẢ PHƯỢNG đón Tết cực dễ, cực ...
+url = https://www.youtube.com/watch?v=aDzQbk-eQvQ
 
 [www.instagram.com]
 match = -72.2%%
@@ -47,9 +47,9 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = -116.7%%
-title = 📍nem nướng út vân: 105 đông tác. ⭐️: 20-50 cành ...
-url = https://www.tiktok.com/@longlongneee/video/7247048935045467397
+match = -16.7%%
+title = Nem Nuong Que Huong Air Fryer
+url = https://www.tiktok.com/discover/nem-nuong-que-huong-air-fryer
 
 [www.diepxuan.com]
 match = 11.1%%
