--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-22 20:24:28
+lastsearch = 2024-07-22 21:18:39
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = Lien Claimants
 url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [profiles.ucsf.edu]
-match = -80.0%%
-title = Matthew Cooperberg, MD, MPH - UCSF Profiles
-url = https://profiles.ucsf.edu/matthew.cooperberg
+match = 10.0%%
+title = Joan Hilton, DSc, MPH
+url = https://profiles.ucsf.edu/joan.hilton
 
 [cityofclovis.com]
 match = -65.0%%
@@ -152,9 +152,9 @@ title = PowerFlex 750-Series AC Drives Reference Manual
 url = https://literature.rockwellautomation.com/idc/groups/literature/documents/rm/750-rm002_-en-p.pdf
 
 [som.cuanschutz.edu]
-match = -135.0%%
-title = Steve Abman, MD Professor, Pediatrics-Pulmonary Medicine
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/5902
+match = -150.0%%
+title = D. Ross Camidge, MD, PhD - School of Medicine - CU Anschutz
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/18871
 
 [vc2040.org]
 match = -145.0%%
