CI images update

--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-07-22 14:51:43
+lastsearch = 2024-07-22 21:47:20
 
 [www.cms.gov]
 match = 4.5%%
@@ -630,4 +630,9 @@ url = https://www.bpelsg.ca.gov/pubs/num_eng_82.pdf
 match = -100.0%%
 title = IROverview
 url = https://ftp.wildfire.gov/public/incident_specific_data/calif_n/2020_FEDERAL_Incidents/CA-PNF-001308_PNF_North_Complex/GIS/Products/20200929/OPS_IR_Overview_archE_land_20200929_0530_NorthComplex_CAPNF1308_0929Day.pdf
+
+[www.smfd.org]
+match = -113.6%%
+title = Recent Alarms | Southern Marin Fire Protection District, CA
+url = https://www.smfd.org/our-district/district-outreach-and-communications/recent-alarms
 
