--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-07-22 11:48:02
+lastsearch = 2024-07-22 21:47:08
 
 [changagoidemsonghong.com]
-match = 33.3%%
-title = Bộ chăn ga gối 100%% cotton mã mầu BC22-066
-url = https://changagoidemsonghong.com/chan-ga-goi-bc66
+match = 7.4%%
+title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
+url = https://changagoidemsonghong.com/chan-ga-goi-bc16
 
 [demhong.vn]
 match = 11.1%%
@@ -72,9 +72,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16
 url = https://bedding.vn/chan-ga-goi-song-hong-uc16/
 
 [shopee.vn]
-match = -66.7%%
-title = Bộ ga gối 4 món poly cotton drap giường bo chun miễn phí ...
-url = https://shopee.vn/Bộ-ga-gối-4-món-poly-cotton-drap-giường-bo-chun-miễn-phí-bộ-chăn-ga-gối-4-món-mùa-hè-cao-cấp-Otama-Bedding-i.472596491.10822106491
+match = -40.7%%
+title = bộ chăn ga gối cotton poly giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=bộ chăn ga gối cotton poly
 
 [lynconcept.com]
 match = -25.9%%
@@ -152,9 +152,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16 - Đệm Thiên Kim
 url = https://demthienkim.com/chan-ga-goi-song-hong-uc16/
 
 [elmichsleep.vn]
-match = -29.6%%
-title = Chăn Ga Gối - Cao Cấp - Đạt chuẩn chất lượng Châu Âu
-url = https://elmichsleep.vn/chan-ga-goi
+match = -18.5%%
+title = Bộ chăn ga 100%% Cotton Ranforce - Elmich Dr.Sleep
+url = https://elmichsleep.vn/bo-chan-ga-100-cotton-ranforce
 
 [khodemgiagoc.com]
 match = -37.0%%
