--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-07-22 16:33:55
+lastsearch = 2024-07-22 21:51:14
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -27,9 +27,9 @@ title = Tượng nữ thần bằng đá 18 - Đá mỹ nghệ Ninh Bình
 url = https://ninhbinhstone.com/tuo-ng-nu-tha-n-ba-ng-da-18
 
 [www.facebook.com]
-match = 22.2%%
-title = Xuất khẩu lao động đài loan
-url = https://www.facebook.com/groups/1614526782056365/
+match = -53.8%%
+title = Erica Năm Căn
+url = https://www.facebook.com/profile.php?id=61550060091014&locale=fa_IR
 
 [nhua66a.com]
 match = -17.9%%
@@ -235,4 +235,9 @@ url = https://www.most.gov.vn/vn/tin-tuc/21076/thong-tin-ve-ket-qua-thuc-hien-nh
 match = 39.3%%
 title = Chiều cao vẫn còn tăng trưởng |
 url = https://drdaochum.wordpress.com/a-phương-phap-tang-chiều-cao/chiều-cao-vẫn-con-tang-trưởng/
+
+[vi.wikipedia.org]
+match = 14.3%%
+title = Thành viên:King of Xavier/nháp/1
+url = https://vi.wikipedia.org/wiki/Thành_viên:King_of_Xavier/nháp/1
 
