--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-22 20:46:18
+lastsearch = 2024-07-22 21:50:27
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -350,4 +350,9 @@ url = https://old.kienguru.vn/blog/tron-bo-cong-thuc-vat-ly-12-on-thi-thpt-quoc-
 match = -233.3%%
 title = Máy ủ lắc khay vi thể kỹ thuật số DTS-4, Hãng: Elmi/ Latvia
 url = https://www.thietbianhoa.vn/may-u-lac-nhiet-ky-thuat-so-dts-4-hang-elmi-latvia
+
+[saca.com.vn]
+match = -366.7%%
+title = SGC
+url = https://saca.com.vn/en/sgc.html
 
