--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-07-22 20:52:51
+lastsearch = 2024-07-22 21:46:45
 
 [everonvn.com.vn]
-match = -133.3%%
-title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
-url = https://everonvn.com.vn/everon/611/bo-everon-es1807
+match = -128.6%%
+title = Bảng giá bán bộ chăn ga gối cưới Everon Hàn Quốc Es 1816
+url = https://everonvn.com.vn/everon/615/bo-everon-es1816
 
 [www.everonqb.com]
-match = -71.4%%
-title = Ga phủ ESM20013 180x200 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/ga-phu-esm20013-180x200.html
+match = -9.5%%
+title = Everon Quảng Bình Ga phủ EPC19056 160x200
+url = https://www.everonqb.com/ga-phu-epc19056-160x200.html
 
 [www.diepxuan.com]
 match = 14.3%%
