--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-07-22 18:48:15
+lastsearch = 2024-07-22 21:50:15
 
 [www.youtube.com]
 match = -40.7%%
@@ -17,9 +17,9 @@ title = Phân Loại Vỏ Gối Theo Chất Liệu - Ưu, Nhược Điểm Từn
 url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-diem-tung-loai
 
 [jysk.vn]
-match = -59.3%%
-title = Vỏ Chăn Ga Gối Trơn, Cotton Cao Cấp Bền, Đẹp Giá Rẻ | JYSK
-url = https://jysk.vn/bo-vo-chan-goi-cotton-det-tron
+match = -37.0%%
+title = Vỏ Gối Nằm, Gối Ôm Bền Đẹp, Hiện Đại, Giá Rẻ - JYSK.vn
+url = https://jysk.vn/vo-goi
 
 [elambo.vn]
 match = -3.7%%
@@ -37,9 +37,9 @@ title = Kinh hoàng ruột gối siêu rẻ đen ngòm
 url = https://eva.vn/mua-sam-gia-ca/kinh-hoang-ruot-goi-sieu-re-den-ngom-c2a127941.html
 
 [shopee.vn]
-match = -55.6%%
-title = Chăn ga gối đệm cưới - Giá Tốt, Miễn Phí Vận Chuyển, Đủ ...
-url = https://shopee.vn/list/chăn ga gối/đệm cưới
+match = -22.2%%
+title = vỏ gối hello kitty giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=vỏ gối hello kitty&urlold=vo-goi-om-xoa-nhung-hello-kitty-no/6152316541839545337/343220106741734172/ 
 
 [demxanh.com]
 match = -74.1%%
@@ -187,9 +187,9 @@ title = Bảng giá lẻ vỏ chăn ga gối trắng kẻ sọc cao cấp
 url = https://demhong.vn/chan-ga-goi-trang-ke-soc/
 
 [dienmaycholon.com]
-match = -22.2%%
-title = Samsung Galaxy S24 Ultra 5G (12GB+256GB)
-url = https://dienmaycholon.com/dien-thoai-di-dong/samsung-galaxy-s24-ultra-5g-12gb256gb
+match = -48.1%%
+title = Cách tìm lại nhật ký cuộc gọi đã xóa trên Android và ...
+url = https://dienmaycholon.com/kinh-nghiem-mua-sam/huong-dan-cach-tim-lai-nhat-ky-cuoc-goi-da-xoa-tren-android-va-iphone
 
 [metruyen.me]
 match = 33.3%%
