CI images update

--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-07-22 18:49:57
+lastsearch = 2024-07-22 22:13:40
 
 [www.linkedin.com]
 match = -145.5%%
@@ -67,9 +67,9 @@ title = Mt Tam Trail Map, (Mount Tamalpais State Park) California ...
 url = https://www.ebay.com/itm/234042671995
 
 [www.runguides.com]
-match = -318.2%%
-title = San Francisco Bay Area Running Race Calendar - 24/25
-url = https://www.runguides.com/san-francisco/runs
+match = -181.8%%
+title = 2024 Peacock Gap Trail Run | San Rafael
+url = https://www.runguides.com/event/3294/peacock-gap-trail-run
 
 [www.kategridley.com]
 match = -125.0%%
@@ -82,9 +82,9 @@ title = Reviews: On the Edge
 url = https://www.imdb.com/title/tt0091677/reviews
 
 [ultrasignup.com]
-match = -63.6%%
-title = Nick Wilson's Results
-url = https://ultrasignup.com/results_participant.aspx?fname=Nick&lname=Wilson
+match = -36.4%%
+title = Registration Hot List
+url = https://ultrasignup.com/hotlist.aspx
 
 [www.gs1.org]
 match = -18.2%%
