--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-07-22 20:50:18
+lastsearch = 2024-07-22 22:13:52
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -12,9 +12,9 @@ title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
 
 [shopee.vn]
-match = -7.1%%
-title = Chiếu nhựa 🍀𝑭𝑹𝑬𝑬 𝑺𝑯𝑰𝑷🍀Chiếu nhựa loại đẹp Hà Nội ...
-url = https://shopee.vn/Chiếu-nhựa-🍀𝑭𝑹𝑬𝑬-𝑺𝑯𝑰𝑷🍀Chiếu-nhựa-loại-đẹp-Hà-Nội-chiếu-nhựa-chiếu-nhựa-gấp-gọn-chiếu-ngủ-văn-phòng-du-lịch-i.533272024.25669597976
+match = -25.0%%
+title = Chiếu nhựa gấp gọn size 2m ×3m chiếu ăn cơm hàng đẹp ...
+url = https://shopee.vn/Chiếu-nhựa-gấp-gọn-size-2m-×3m-chiếu-ăn-cơm-hàng-đẹp-nhiều-màu-i.114438421.4732248740
 
 [tiki.vn]
 match = -21.4%%
@@ -22,9 +22,9 @@ title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 
 [www.yellowpages.vn]
-match = -5.3%%
-title = sản xuất chiếu nhựa
-url = https://www.yellowpages.vn/tgcls/40490435/sản-xuất-chiếu-nhựa.html?j=3
+match = 0.0%%
+title = danh sách Chiếu Nhựa
+url = https://www.yellowpages.vn/tgcls/10490435/Chiếu-Nhựa.html?j=0
 
 [www.dienmayxanh.com]
 match = -35.7%%
