--- a/images/ruot-goi-ke-korea/config.ini
+++ b/images/ruot-goi-ke-korea/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea.html
 lastopen = 2024-06-10 00:58:26
 
 [search]
-lastsearch = 2024-07-22 21:19:00
+lastsearch = 2024-07-22 22:18:26
 
 [www.diepxuan.com]
 match = -64.7%%
@@ -22,9 +22,9 @@ title = Ruột gối Microfiber Korea Virgin
 url = https://www.detmaykimthanh.com/shops/goi/goi-khach-san-131.html
 
 [shopee.vn]
-match = -105.9%%
-title = Combo 2 chiếc gối bông cotton korea 65cm x 45cm
-url = https://shopee.vn/Combo-2-chiếc-gối-bông-cotton-korea-65cm-x-45cm-01-cặp-ruột-gối-bông-cao-cấp-i.135534164.7132132800
+match = 0.0%%
+title = Ruột gối Korea | Shopee Việt Nam
+url = https://shopee.vn/Ruột-gối-Korea-i.33372594.2602291227
 
 [demxanh.com]
 match = -100.0%%
@@ -82,9 +82,9 @@ title = Ruot-goi-micro-1-1 - Korean Pillows & Blankets - Everon
 url = https://everonvietnam.com/en/ruot-goi-micro-1-1/
 
 [tiki.vn]
-match = -135.3%%
-title = Ruột gối giá tốt, bền đẹp, giao siêu tốc Tháng 7, 2024
-url = https://tiki.vn/ruot-goi/c23366
+match = -70.6%%
+title = Mua Ruột gối ép hơi Korea kích thước 40x60cm
+url = https://tiki.vn/ruot-goi-ep-hoi-korea-kich-thuoc-40x60cm-p46348341.html?spid=117894377
 
 [www.sieuthinem.vn]
 match = -35.3%%
