--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-22 18:46:16
+lastsearch = 2024-07-22 22:30:49
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -12,9 +12,9 @@ title = CHIẾU TRÚC TĂM H&T CÂY
 url = https://chieutrucsaigon.com/chieu-truc-tam/
 
 [shopee.vn]
-match = -6.7%%
-title = chiếu trúc tăm hương trúc ht
-url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
+match = -40.0%%
+title = chiếu trúc tăm HT cao cấp 2mx2.2m
+url = https://shopee.vn/chiếu-trúc-tăm-HT-cao-cấp-2mx2.2m-i.68883759.22469028239
 
 [chieutruc.info]
 match = -126.7%%
@@ -23,13 +23,13 @@ url = https://chieutruc.info/chieu-tam-ht/
 
 [www.thietbidiendgp.vn]
 match = -13.3%%
-title = Bóng tuýp HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/bong-tuyp-htlight
+title = Đèn chiếu điểm HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/den-chieu-diem-htlight
 
 [www.htlightlevel.vn]
-match = -120.0%%
-title = Đèn Rọi Ray 8019 Tay Trắng - HT Max Light
-url = https://www.htlightlevel.vn/den-roi-ray-8019-10w-tay-trang/
+match = -193.3%%
+title = Đèn Rọi Cỏ - Công Ty Sản Xuất Đèn LED Chiếu Sáng HT ...
+url = https://www.htlightlevel.vn/den-roi-co-5w/
 
 [www.dienotobinhdinh.com]
 match = 15.4%%
