--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-22 21:52:57
+lastsearch = 2024-07-22 22:38:36
 
 [m.youtube.com]
 match = -144.4%%
@@ -17,9 +17,9 @@ title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
 url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.instagram.com]
-match = -144.4%%
-title = Thùy Ngân (@huuloc861) • Instagram photos and videos
-url = https://www.instagram.com/huuloc861/
+match = -50.0%%
+title = NEM Furniture JSC (@nemfurniturejsc)
+url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [www.facebook.com]
 match = 22.2%%
@@ -27,9 +27,9 @@ title = NEM Fashion - 𝐀́𝐎 𝐏𝐇𝐀𝐎
 url = https://www.facebook.com/story.php/?story_fbid=745952497567450&id=100064581196454
 
 [www.tiktok.com]
-match = 5.6%%
-title = Blue Shield Club Lounge
-url = https://www.tiktok.com/discover/blue-shield-club-lounge
+match = -127.8%%
+title = Nem Nướng Siêu To Khổng Lồ Siêu Ngon #ancungtiktok ...
+url = https://www.tiktok.com/@thenguyen_kitchen/video/7139504048713010458
 
 [www.youtube.com]
 match = -144.4%%
@@ -72,9 +72,9 @@ title = U.S. DEPARTMENT OF COMMERCE National Technical ...
 url = https://www.ojp.gov/pdffiles1/Photocopy/93776NCJRS.pdf
 
 [m.facebook.com]
-match = -105.6%%
-title = Ăn vặt ngon Cali | NEM CHUA HỦ $65 ( 50 cái )
-url = https://m.facebook.com/groups/anvatngoncali/posts/8357068874306053/
+match = -61.1%%
+title = Ăn vặt ngon Cali | 💥NEM NƯỚNG NHA TRANG
+url = https://m.facebook.com/groups/anvatngoncali/posts/8385390094807264/
 
 [www.proz.com]
 match = -183.3%%
