--- a/images/ruot-goi-vuong-warmdream-45x45/config.ini
+++ b/images/ruot-goi-vuong-warmdream-45x45/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-vuong-warmdream-45x45.html
 lastopen = 2024-06-07 01:58:20
 
 [search]
-lastsearch = 2024-07-22 20:26:42
+lastsearch = 2024-07-22 22:35:01
 
 [bellizeno.com]
 match = -14.3%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/Gối-vuông-trang-trí-gối-sofa-đơn-giản-(có-kè
 [happynest.vn]
 match = -43.3%%
 title = Gối Vuông Trang Trí, Gối Sofa Đơn Giản Có Kèm Ruột Gối ...
-url = https://happynest.vn/shop/0902001713/goi-vuong-trang-tri,-goi-sofa-don-gian-co-kem-ruot-goi-make-my-home-piece-13.html
+url = https://happynest.vn/shop/0902001709/goi-vuong-trang-tri,-goi-sofa-don-gian-co-kem-ruot-goi-make-my-home-piece-9.html
 
 [sieuthicholon.com]
 match = -30.0%%
@@ -125,4 +125,9 @@ url = https://unofficialwarmoth.com/threads/my-tele-dream-comes-slowly-true.2117
 match = -3.7%%
 title = Nerello Cappuccio | Godello
 url = https://godello.ca/tag/nerello-cappuccio/
+
+[www.furaffinity.net]
+match = -36.7%%
+title = Userpage of PrismaDream -- Fur Affinity [dot] net
+url = https://www.furaffinity.net/user/prismadream/
 
