CI images update

--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-22 16:52:02
+lastsearch = 2024-07-22 22:47:32
 
 [en.wikipedia.org]
 match = 15.0%%
@@ -302,9 +302,9 @@ title =
 url = https://languagelog.ldc.upenn.edu/nll/?p=39433
 
 [www.quora.com]
-match = -115.0%%
-title = Hey, can I move out at 18 and move to South Korea ...
-url = https://www.quora.com/Hey-can-I-move-out-at-18-and-move-to-South-Korea-and-get-a-degree-there
+match = -125.0%%
+title = Can I move to South Korea at the age of 18 and graduate ...
+url = https://www.quora.com/Can-I-move-to-South-Korea-at-the-age-of-18-and-graduate-from-a-high-school-there-without-my-parents-permission-I-live-in-America-and-the-age-of-adulthood-here-is-18-so-I-can-leave-the-country-right
 
 [hospitalfield.org.uk]
 match = -90.0%%
