--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-22 21:15:56
+lastsearch = 2024-07-22 22:45:02
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -17,9 +17,9 @@ title = Can HOA come onto my property?
 url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [www.quora.com]
-match = -194.1%%
-title = If you live in a neighborhood with a HOA can they keep out ...
-url = https://www.quora.com/If-you-live-in-a-neighborhood-with-a-HOA-can-they-keep-out-a-resident-if-they-are-not-listed-on-the-deed
+match = -182.4%%
+title = HOA founded after I bought my house. Can I be forced to ...
+url = https://www.quora.com/HOA-founded-after-I-bought-my-house-Can-I-be-forced-to-join
 
 [lauragoodsonart.com]
 match = 47.1%%
@@ -112,9 +112,9 @@ title = The 2023 Florida Statutes (including Special Session C)
 url = http://www.leg.state.fl.us/statutes/index.cfm?App_mode=Display_Statute&URL=0700-0799/0720/0720.html
 
 [www.flsenate.gov]
-match = -70.6%%
-title = Chapter 720 - 2023 Florida Statutes
-url = https://www.flsenate.gov/Laws/Statutes/2023/Chapter720/All
+match = -129.4%%
+title = Chapter 720 Section 303 - 2018 Florida Statutes
+url = https://www.flsenate.gov/Laws/Statutes/2018/0720.303
 
 [www.navy.mil]
 match = -23.5%%
