--- a/images/bo-chan-ga-goi-uc-solid-18/config.ini
+++ b/images/bo-chan-ga-goi-uc-solid-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-solid-18.html
 lastopen = 2024-06-07 01:32:39
 
 [search]
-lastsearch = 2024-07-22 22:22:55
+lastsearch = 2024-07-22 23:21:06
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -27,9 +27,9 @@ title = Chăn ga gối Sông Hồng không chần 100%% cotton Solid
 url = https://demhong.vn/chan-ga-goi-song-hong-don-sac-khong-chan/
 
 [chandem.com.vn]
-match = 42.3%%
-title = Bộ chăn ga gối Litter Girl Ctt112
-url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-ctt112/
+match = 34.6%%
+title = Bộ chăn ga gối cao cấp Chang My P144
+url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-p144/
 
 [www.koala.vn]
 match = -3.8%%
@@ -37,9 +37,9 @@ title = Bộ Chăn Ga Gối Solid SA 18 (120*190 cm) - Koala
 url = https://www.koala.vn/bo-chan-ga-goi-solid-sa-18.html
 
 [shopee.vn]
-match = -42.3%%
-title = Bộ chăn ga gối 5 món chăn phao trần bông dày siêu nhẹ ...
-url = https://shopee.vn/Bộ-chăn-ga-gối-5-món-chăn-phao-trần-bông-dày-siêu-nhẹ-cao-cấp-không-cần-lồng-vỏ-tiện-lợi-i.256686586.9136448059
+match = 0.0%%
+title = BỘ CHĂN GA GỐI COTTON POLY MẪU TRÁI BƠ CỰC ...
+url = https://shopee.vn/BỘ-CHĂN-GA-GỐI-COTTON-POLY-MẪU-TRÁI-BƠ-CỰC-XINH-DRAP-GIƯỜNG-i.258261260.6137505996
 
 [bedding.vn]
 match = -42.3%%
@@ -105,4 +105,9 @@ url = http://www.tonybowick.com/praxis-about-tony/comment-page-1/
 match = 34.6%%
 title = Bộ Chăn Drap Gối Edena Cotton Solid 362
 url = https://nasago.vn/bo-chan-drap-goi-edena-cotton-solid-362/
+
+[demthienkim.com]
+match = -53.8%%
+title = Cung cấp chăn ga gối Sông Hồng dòng Home mã H18-056 cao cấp
+url = https://demthienkim.com/chan-ga-goi-h18-056/
 
