--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-07-22 21:21:04
+lastsearch = 2024-07-22 23:16:15
 
 [www.diepxuan.com]
-match = 4.5%%
-title = Bộ ga chun coco 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-chun-coco-180x200.html
+match = -72.7%%
+title = Điệp Xuân Bộ ga gối chun coco 18 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 
 [shopee.vn]
 match = 13.6%%
-title = Ga gối nỉ Coco bo chun hoa trà
-url = https://shopee.vn/Ga-gối-nỉ-Coco-bo-chun-hoa-trà-i.141565512.17099296949
+title = Bộ Ga Gối Bo Chun Trần Phi Lụa Coco
+url = https://shopee.vn/product/494447407/24864025138
 
 [m.facebook.com]
-match = -81.8%%
-title = Chiếu điều hoà (chiếu mây), chiếu tre, chăn-ga-gối
-url = https://m.facebook.com/groups/151776543537474/posts/778191197562669/
+match = -18.2%%
+title = COCO Decor - Chăn Ga Gối | Nam Định
+url = https://m.facebook.com/cocodecorchangagoidem/
 
 [hanvico.com.vn]
 match = 31.8%%
