--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-22 20:35:33
+lastsearch = 2024-07-22 23:24:50
 
 [www.instagram.com]
-match = -23.1%%
-title = Yuki Chan (@meow_kikiki)
-url = https://www.instagram.com/meow_kikiki/
+match = -30.8%%
+title = Yuki Chan (@yukichan_la)
+url = https://www.instagram.com/yukichan_la/?hl=en
 
 [www.linkedin.com]
 match = 23.1%%
@@ -17,8 +17,8 @@ title = Hoi Chan Studio
 url = https://www.linkedin.com/in/yiu-hoi-chan
 
 [www.creativeboom.com]
-match = -253.8%%
-title = Hoi Chan draws on scientific illustrations to create ...
+match = -307.7%%
+title = Hoi Chan draws on scientific illustrations to create 'muted ...
 url = https://www.creativeboom.com/inspiration/hoi-chan/
 
 [www.facebook.com]
@@ -47,9 +47,9 @@ title =
 url = https://www.behindthename.com/name/yuki01chan/submitted
 
 [hk.linkedin.com]
-match = -223.1%%
-title = Chan Hoi Ching - Hong Kong SAR | Professional Profile
-url = https://hk.linkedin.com/in/chan-hoi-ching-381002b7
+match = -107.7%%
+title = Yuki Chan - Hong Kong, Hong Kong SAR
+url = https://hk.linkedin.com/in/yuki-y-chan?trk=public_profile_samename-profile
 
 [www.eduhk.hk]
 match = -200.0%%
@@ -195,4 +195,9 @@ url = https://www.tiktok.com/@catbrows/video/7371964108607900958
 match = -261.5%%
 title = Chan Hoi Yan - Singapore, Singapore | Professional Profile
 url = https://sg.linkedin.com/in/chan-hoi-yan-1662701aa
+
+[chuatekming.wordpress.com]
+match = -69.2%%
+title = Nagato Yuki-chan No Shoushitsu
+url = https://chuatekming.wordpress.com/2016/02/06/nagato-yuki-chan-no-shoushitsu/
 
