--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-22 21:53:32
+lastsearch = 2024-07-22 23:15:52
 
 [zhangbrickshop.com]
 match = -133.3
@@ -57,9 +57,9 @@ title = Xác định hàm lượng vitamin D2 từ một số loài nấm lớn 
 url = https://vjol.info.vn/index.php/vinhuni/article/download/51293/42137/
 
 [m.facebook.com]
-match = -186.7%%
-title = Hội Những Người Ở Ký Túc Xá Khu B - KTX ĐHQG TP.HCM
-url = https://m.facebook.com/groups/hoiktxkhub/posts/2389133951467070/
+match = -266.7%%
+title = C còn it trái cây sale, ship liền toà siêu tốc, 9h c bắt đầu giao
+url = https://m.facebook.com/groups/hoiktxkhub/posts/2395570457490086/
 
 [dkv.biz.vn]
 match = -166.7%%
@@ -182,9 +182,9 @@ title = 2'-deoxyuridine D2
 url = https://www.aptochem.com/p-101-2-deoxyuridine-d2.aspx
 
 [shopee.vn]
-match = -133.3%%
-title = Vitamin D2+K3 Lineabon tăng chiều cao cho bé
-url = https://shopee.vn/Vitamin-D2-K3-Lineabon-tăng-chiều-cao-cho-bé-i.230152250.24018506156
+match = -206.7%%
+title = Trống Cajon AB-D2 có tay vặn chỉnh kèm EQ kết nối loa
+url = https://shopee.vn/Trống-Cajon-AB-D2-có-tay-vặn-chỉnh-kèm-EQ-kết-nối-loa-Tặng-bao-và-dây-jack-3m-i.37429989.9030570402
 
 [uspharma.vn]
 match = -16.7%%
