--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-07-22 15:49:34
+lastsearch = 2024-07-22 23:21:29
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu lác D2 15
 url = https://www.diepxuan.com/chieu-lac-d2-15.html
 
 [www.facebook.com]
-match = -240.0%%
-title = Cơ sở thứ 6 Celadon Sports & Resort số 2, đường D2 , Sơn ...
-url = https://www.facebook.com/TheDucBangTamPhatTrienChieuCaoVaTheLucChoTreEm/videos/cơ-sở-thứ-6-celadon-sports-resort-số-2-đường-d2-sơn-kỳ-tân-phú-bố-mẹ-có-thể-đưa-/1798013050339107/
+match = -86.7%%
+title = PHOTOTIMEVietnam | Ho Chi Minh City
+url = https://www.facebook.com/phototimevn/
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -395,4 +395,9 @@ url = https://www.highlandscoffee.com.vn/vn/he-thong-cua-hang.html
 match = -113.3%%
 title = Hàm Count, Counta, Countif Trong Excel
 url = https://bvcubadonghoi.vn/ham-count-counta-countif-trong-excel
+
+[www.thietbianhoa.vn]
+match = -233.3%%
+title = Máy lắc 3 chiều cỡ vừa, Model: RCK 3D 200, Hãng TaisiteLab ...
+url = https://www.thietbianhoa.vn/may-lac-3-chieu-co-vua-model-rck-3d-200-hang-taisitelab-sciences-inc-my
 
