--- a/images/chieu-truc-den-10/config.ini
+++ b/images/chieu-truc-den-10/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-10.html
 lastopen = 2024-06-07 00:19:41
 
 [search]
-lastsearch = 2024-07-22 20:52:40
+lastsearch = 2024-07-22 23:20:07
 
 [demxanh.com]
 match = -135.3%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOopAjmZ9-ZSr0H6cmALCT_Ul3XFGx08GPVe_hsrEKLFr3iEp7dqR
 
 [dem24h.vn]
 match = -29.4%%
