--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-22 20:44:12
+lastsearch = 2024-07-22 23:20:29
 
 [www.galottery.com]
 match = -7.7%%
@@ -214,7 +214,7 @@ url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-f
 [books.google.com]
 match = -7.7%%
 title = Chipewyan Texts
-url = https://books.google.com/books?id=0u4SAAAAYAAJ&pg=PA147&lpg=PA147&dq=ga+ni+long+14&source=bl&ots=lQpsEOClAL&sig=ACfU3U0Mc-xihsTxuditbJsEljeDxytxPg&hl=en&sa=X&ved=2ahUKEwia8aLGobqHAxUWmO4BHVtMAm0Q6AF6BAgaEAM
+url = https://books.google.com/books?id=0u4SAAAAYAAJ&pg=PA147&lpg=PA147&dq=ga+ni+long+14&source=bl&ots=lQpsERznyF&sig=ACfU3U3_vDbD1yoyae01WzzIBpKIcGKcZQ&hl=en&sa=X&ved=2ahUKEwj9r8XjhruHAxXfHDQIHXOXCFQQ6AF6BAgXEAM
 
 [ottawabraves.com]
 match = -292.3%%
