--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-22 21:19:11
+lastsearch = 2024-07-22 23:25:01
 
 [burningman.org]
-match = 13.3%%
-title = Kids at Burning Man
-url = https://burningman.org/event/preparation/playa-living/kids/
+match = -60.0%%
+title = The 10 Principles of Burning Man
+url = https://burningman.org/about/10-principles/
 
 [www.usatoday.com]
 match = 0.0%%
@@ -1005,4 +1005,9 @@ url = https://www.stmichaelcinema.com/
 match = 0.0%%
 title = 
 url = https://www.bbc.com/worklife/article/20230907-how-much-it-costs-to-attend-the-burning-man-festival
+
+[www.12onyourside.com]
+match = -120.0%%
+title = WWBT | Central Virginia News and Weather
+url = https://www.12onyourside.com/
 
