--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-22 20:36:29
+lastsearch = 2024-07-22 23:19:07
 
 [screenrant.com]
 match = 0.0%%
@@ -12,9 +12,9 @@ title =
 url = https://screenrant.com/use-green-screen-feature-youtube-shorts-how/
 
 [www.facebook.com]
-match = -7.1%%
-title = Người Việt Houston
-url = https://www.facebook.com/groups/NguoiVietHouston/
+match = -235.7%%
+title = Luật Di trú và Cuộc sống Mỹ | BỊ THU HỒI THẺ XANH KHI ...
+url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
 
 [www.youtube.com]
 match = -250.0%%
@@ -32,9 +32,9 @@ title = Màn chụp giá rẻ
 url = https://demxanh.com/man-chup-gia-re.html
 
 [www.uscis.gov]
-match = -7.1%%
-title = Explore my Options
-url = https://www.uscis.gov/forms/explore-my-options
+match = -114.3%%
+title = About the EB-5 Visa Classification
+url = https://www.uscis.gov/working-in-the-united-states/permanent-workers/employment-based-immigration-fifth-preference-eb-5/about-the-eb-5-visa-classification
 
 [www.evergreenrecreation.com]
 match = -157.1%%
@@ -82,9 +82,9 @@ title = 10 Natural Ways to Build Healthy Bones
 url = https://www.healthline.com/nutrition/build-healthy-bones
 
 [en.wikipedia.org]
-match = -78.6%%
-title = Nadia: The Secret of Blue Water
-url = https://en.wikipedia.org/wiki/Nadia:_The_Secret_of_Blue_Water
+match = -20.0%%
+title = Green card
+url = https://en.wikipedia.org/wiki/Green_card
 
 [www.imdb.com]
 match = -57.1%%
