--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-07-22 20:04:23
+lastsearch = 2024-07-22 23:24:19
 
 [www.diepxuan.com]
 match = 50.0%%
@@ -12,13 +12,13 @@ title = Điệp Xuân Thảm giường nỉ 180x200
 url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
+match = -45.5%%
+title = Thanh lý thảm trải giường lông cừu giá cực rẻ
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-07.html
 
 [www.lazada.vn]
-match = -68.2%%
-title = Ga chống thấm trải giường cotton 2 lớp loại tốt ...
+match = -113.6%%
+title = Ga chống thấm trải giường cotton 2 lớp loại tốt kích thước ...
 url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
 
 [noithatlongthai.com]
@@ -62,9 +62,9 @@ title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
 url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [jysk.vn]
-match = -68.2%%
-title = Mattress 180x200 GOLD S95 DREAMZONE - JYSK
-url = https://jysk.vn/en-US/spring-mattress-dreamzone-s95-r180xd200xc28cm
+match = -54.5%%
+title = Bed frame VEDDE 180x200 wild oak - JYSK.vn
+url = https://jysk.vn/en-US/bed-frame-vedde-180x200-wild-oak
 
 [decosy.com]
 match = -166.7%%
