CI images update

--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-07-22 20:49:46
+lastsearch = 2024-07-22 23:34:55
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -112,9 +112,9 @@ title = Đệm bông tinh khiết Sông Hồng
 url = https://songhonghn.com/danh-sach-san-pham/4
 
 [www.museum.ru]
-match = -96.4%%
-title = King donut teriyaki laundromat menu Pflow toolbox office volume ...
-url = http://www.museum.ru/future/lmp/link.asp?back=web/default.htm&url=http://xn--b1axgcdb.xn--p1ai/TrLgQ6Sfe43v
+match = -32.1%%
+title = {gfxvp} Austrian army attacked itself tumblr
+url = http://www.museum.ru/future/lmp/link.asp?back=web/default.htm&url=http://xn--75-6kc3bfr2e.xn--p1ai/lGTFsmBfe43v
 
 [shopee.vn]
 match = -3.6%%
@@ -145,4 +145,14 @@ url = https://everon.com/chuong-trinh-giam-gia/giam-5-bst-chan-troi-moi-ss24-col
 match = -7.1%%
 title = Brown boy a kay video download hd [9jH0U5]
 url = http://202.129.46.118/ULIB6NEW//dublin.linkout.php?url=https://xn--b1afzj3b4c.xn--p1ai/8792456emotivru4fe80y
+
+[www.diversitybusiness.com]
+match = -4.0%%
+title = {eyltk} Forum psyxologias
+url = http://www.diversitybusiness.com/SpecialFunctions/NewSiteReferences.asp?NwSiteurl=https://xn--b1axgco2a.xn--p1ai/56173891rfe43a
+
+[archive.org]
+match = 0.0%%
+title = Video help, tips, and techniques
+url = https://archive.org/help/video.php?identifier=jadi-anime-cap-cut-template-4&ht=480&wd=640&url=https://xn--b1axgco8a.xn--p1ai/2974861atemvoyage4fe43y
 
