--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-22 20:46:07
+lastsearch = 2024-07-22 23:43:41
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = LIVE CHIỀU 21.7 HỒ ĐIỆP HOA TẾT NHIỀU MÀU XẢ CHỈ ...
 url = https://www.youtube.com/watch?v=mc2aBdGmUxI
 
 [books.google.com]
-match = -231.2%%
-title = Tam tu kinh: ou, Le livre des phrases de trois caractères, ...
-url = https://books.google.com/books?id=So8wAAAAYAAJ&pg=RA3-PA14&lpg=RA3-PA14&dq=chieu+lac+soc+16&source=bl&ots=ihPQcXbg80&sig=ACfU3U0WanYEYYt1pitG5ITZbK_amaByGQ&hl=en&sa=X&ved=2ahUKEwio5-qi5LqHAxVHGVkFHZ6EDjgQ6AF6BAgZEAM
+match = -225.0%%
+title = Tam tu kinh; ou, Le livre des phrases de trois caractères ...
+url = https://books.google.com/books?id=V8wOAAAAQAAJ&pg=RA7-PA14&lpg=RA7-PA14&dq=chieu+lac+soc+16&source=bl&ots=B99b9WR_Zj&sig=ACfU3U2ujXB4p2LIHVo6W4mhAwMh10e8Fw&hl=en&sa=X&ved=2ahUKEwim6Y77i7uHAxU34ckDHZ_iC7kQ6AF6BAgdEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
