--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-22 15:35:50
+lastsearch = 2024-07-22 23:37:28
 
 [www.gov.uk]
 match = -200.0%%
@@ -965,4 +965,9 @@ url = https://www.saisd.net/
 match = -160.0%%
 title = Brainly: AI Homework Helper - Apps on Google Play
 url = https://play.google.com/store/apps/details?id=co.brainly&hl=en_US
+
+[www.justice.gov]
+match = 0.0%%
+title = 
+url = https://www.justice.gov/interpol-washington/frequently-asked-questions
 
