--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-07-22 22:44:29
+lastsearch = 2024-07-22 23:45:10
 
 [changagoidemsonghong.com]
-match = 18.5%%
-title = chăn ga gối cotton cao cấp Archives
-url = https://changagoidemsonghong.com/chan-ga-goi-cotton-cao-cap
+match = 33.3%%
+title = Bộ chăn ga gối 100%% cotton mã mầu BC22-061
+url = https://changagoidemsonghong.com/chan-ga-goi-bc61
 
 [demhong.vn]
 match = 11.1%%
@@ -117,9 +117,9 @@ title = Cotton S (CTS) - Koala
 url = https://koala.vn/chan-ga-goi/koala-cts
 
 [cuahangchangagoidem.com]
-match = -11.1%%
-title = Những Bộ Chăn Ga Gối Đệm Cao Cấp Sang Trọng Quý Phái
-url = https://cuahangchangagoidem.com/bo-chan-ga-goi-dem-cao-cap/
+match = -25.9%%
+title = Chăn Ga Gối Đệm Cao Cấp Giá Tốt Freeship Tích Điểm
+url = https://cuahangchangagoidem.com/cua-hang-chan-ga-goi-dem/
 
 [spacet.vn]
 match = -33.3%%
