--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-22 18:14:12
+lastsearch = 2024-07-22 23:52:42
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Bảo tồn và phát triển nghề dệt chiếu lác - di sản phi v
 url = https://dangcongsan.vn/tu-tuong-van-hoa/bao-ton-va-phat-trien-nghe-det-chieu-lac--di-san-phi-vat-the-quoc-gia-290444.html
 
 [www.thegioididong.com]
-match = -212.5%%
-title = Top 20 game online mobile (Android, iOS) hay nhất nên ...
-url = https://www.thegioididong.com/game-app/top-10-game-online-hay-nhat-tren-dien-thoai-android-ios-1312542
+match = -193.8%%
+title = Tổng hợp đáp án game Đuổi hình bắt chữ (2710 câu) mới ...
+url = https://www.thegioididong.com/game-app/tong-hop-dap-an-game-duoi-hinh-bat-chu-2710-cau-moi-va-day-du-1393175
 
 [hawater.com.vn]
 match = -75.0%%
@@ -187,9 +187,9 @@ title = 974 người theo dõi trên Pinterest - Petal Designs
 url = https://petaldesigns.co.za/ảnh-cặc-to-anime.html
 
 [m.facebook.com]
-match = -118.8%%
-title = Thiên Nhai Minh Nguyệt Đao VNG Official Group
-url = https://m.facebook.com/groups/thiennhaiminhnguyetdaovng/posts/480404551265212/
+match = -200.0%%
+title = Random Football - Giám đốc thể thao Dan Ashworth đã ...
+url = https://m.facebook.com/randomfootball247/photos/giám-đốc-thể-thao-dan-ashworth-đã-viết-một-bài-dài-cho-niên-giám-manchester-unit/122152373390246182/
 
 [baomoi.com]
 match = -193.8%%
