--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-07-22 18:49:46
+lastsearch = 2024-07-22 23:47:47
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = chiếu tre thái lan loại 1 , hàng có sẵn m2xm9, m5x m9 ...
 url = https://shopee.vn/chiếu-tre-thái-lan-loại-1-hàng-có-sẵn-m2xm9-m5x-m9-m8x2m-2mx2m2-i.264060043.8153444972
 
 [demxanh.com]
-match = -28.6%%
-title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
-url = https://demxanh.com/bang-gia-chieu-truc-2018.html
+match = 14.3%%
+title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
+url = https://demxanh.com/chieu-truc-den.html
 
 [www.lazada.vn]
 match = -85.7%%
@@ -107,9 +107,9 @@ title = Kỷ luật Đại đức Thích Trúc Thái Minh liên quan đến 'xá
 url = https://plo.vn/ky-luat-dai-duc-thich-truc-thai-minh-lien-quan-den-xa-loi-toc-duc-phat-post770271.html
 
 [www.youtube.com]
-match = -133.3%%
-title = Dự đoán EURO: Nhận định bóng đá Romania và Hà Lan (23h ...
-url = https://www.youtube.com/watch?v=Tf9cXUhbMuc
+match = -147.6%%
+title = Vụ 6 người Việt tử vong ở Thái Lan: Thi thể chuyên gia trang ...
+url = https://www.youtube.com/watch?v=8ozxINJNufk
 
 [hanoimoi.vn]
 match = -95.2%%
