--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-22 20:21:40
+lastsearch = 2024-07-22 23:49:15
 
 [www.bible.com]
-match = -88.2%%
-title = LUKA 22 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/LUK.22.MIZCLBSI
+match = 5.9%%
+title = Matthew 20:22-28 NKJV
+url = https://www.bible.com/bible/114/MAT.20.22-28.NKJV
 
 [mizobibleblog.wordpress.com]
 match = -111.8%%
@@ -17,9 +17,9 @@ title = Exodus 1-40 - Mizo BIBle - WordPress.com
 url = https://mizobibleblog.wordpress.com/2017/02/24/exodus-1-40/
 
 [www.biblegateway.com]
-match = -158.8%%
-title = Matthew 20-22 NIV - The Parable of the Workers in the
-url = https://www.biblegateway.com/passage/?search=Matthew 20-22&version=NIV
+match = -147.1%%
+title = Matthew 20:22-24 NIV - “You don't know what you are
+url = https://www.biblegateway.com/passage/?search=Matthew 20:22-24&version=NIV
 
 [mungchup.com]
 match = -100.0%%
@@ -32,9 +32,9 @@ title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
 url = https://munghoangphat.com/
 
 [www.churchofjesuschrist.org]
-match = -205.9%%
-title = 1 Nifai 18 - The Church of Jesus Christ of Latter-day Saints
-url = https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/18?lang=tpi
+match = -200.0%%
+title = 3 Nifai 5 - The Church of Jesus Christ of Latter-day Saints
+url = https://www.churchofjesuschrist.org/study/scriptures/bofm/3-ne/5?lang=tpi
 
 [scert.mizoram.gov.in]
 match = -18.2%%
@@ -72,9 +72,9 @@ title = As an aurora spreads across the stars following the Witness’s ...
 url = https://www.tiktok.com/@destinythegame/video/7378920467576442155
 
 [en.wikipedia.org]
-match = -116.7%%
-title = Anggun
-url = https://en.wikipedia.org/wiki/Anggun
+match = -36.4%%
+title = Sofi Tukker
+url = https://en.wikipedia.org/wiki/Sofi_Tukker
 
 [www.instagram.com]
 match = -182.4%%
