--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-07-22 21:16:28
+lastsearch = 2024-07-22 23:46:50
 
 [www.everonvn.vn]
-match = -16.7%%
-title = Đệm lò xo Everon Posture
-url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Posture.html
+match = 31.1%%
+title = Đệm lò xo King Koil Cloud Firm | Giảm giá 20%%
+url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Cloud-Firm.html
 
 [demxanh.com]
 match = 29.8%%
@@ -17,9 +17,9 @@ title = Đệm lò xo KingKoil Cloud Firm dày 27cm chính hãng
 url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html
 
 [nemragoi.com]
-match = 24.2%%
-title = Nệm lò xo Kingkoil Cloud Euro Top
-url = https://nemragoi.com/nem-lo-xo-kingkoil-cloud-euro-top.html
+match = 37.9%%
+title = Nệm lò xo Kingkoil Cloud Firm
+url = https://nemragoi.com/nem-lo-xo-kingkoil-cloud-firm.html
 
 [everonkorea.com]
 match = 31.8%%
@@ -42,14 +42,14 @@ title = Nệm Lò Xo Everon - Đà Nẵng
 url = https://suongtuyet.com/nem-lo-xo-everon
 
 [www.everonqb.com]
-match = 57.4%%
-title = Nệm lò xo Everon Kingkoil Cloud Firm 180x200x27
-url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html
+match = -270.0%%
+title = Nệm Everon
+url = https://www.everonqb.com/catalog/category/view/s/n-m-everon/id/2013/
 
 [www.diepxuan.com]
-match = 57.4%%
-title = Nệm lò xo Everon Kingkoil Cloud Firm 180x200x27
-url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html
+match = 13.5%%
+title = Nệm everhome TC 15F 16 20 - Điệp Xuân
+url = https://www.diepxuan.com/nem-everhome-tc-15f-16-20.html
 
 [everon.online]
 match = 25.5%%
