CI images update

--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-07-22 23:48:30
+lastsearch = 2024-07-23 00:48:51
 
 [chieutruc.info]
 match = -100.0%%
@@ -37,9 +37,9 @@ title = [HD] Chiếu cói Kim Sơn - Ninh Bình
 url = https://www.youtube.com/watch?v=3QOyWtlqmqg
 
 [www.facebook.com]
-match = 45.5%%
-title = Chiếu Cói Thân Vui Thái Bình
-url = https://www.facebook.com/p/Chiếu-Cói-Thân-Vui-Thái-Bình-100069860554625/
+match = 40.9%%
+title = Chiếu Cói Cao Cấp Nga Sơn
+url = https://www.facebook.com/chieucoiviettrang/
 
 [medlatec.vn]
 match = -109.1%%
@@ -240,4 +240,9 @@ url = https://benhvienphuongdong.vn/thai-18-tuan-nang-bao-nhieu-thi-dat-chuan/
 match = -90.9%%
 title = Chiếu cói sợi nhỏ Thái Bình viền vải, kích thước 1,92mx1 ...
 url = https://www.sendo.vn/chieu-coi-soi-nho-thai-binh-vien-vai-kich-thuoc-1-92mx1-5m-co-the-gap-doc-kich-thuoc-1-92mx-0-75m-20265416.html
+
+[www.mof.gov.vn]
+match = -9.1%%
+title = Cổng Thông tin điện tử Bộ Tài Chính
+url = https://www.mof.gov.vn/
 
