--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-07-22 21:50:50
+lastsearch = 2024-07-23 00:51:10
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -14,7 +14,7 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my14/
 [www.diepxuan.com]
 match = -4.8%%
 title = Điệp Xuân Bộ chăn ga gối màu xoa tin 14
-url = https://www.diepxuan.com/bo-chan-ga-goi-mau-xoa-tin-14.html
+url = https://www.diepxuan.com/bo-chan-ga-goi-mau-xoa-tin-14.html?srsltid=AfmBOoqOm1kUJijaEyKJwBDFnEPoOt7DrjcjQZ6lPsNkB8uOJAvpqJvz
 
 [lasantevn.com]
 match = -57.1%%
@@ -44,7 +44,7 @@ url = https://songhong.info/chan-ga-goi-bc14
 [demxanh.com]
 match = -52.4%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 14
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-14.html
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-14.html?srsltid=AfmBOoqV2ur3JBC73mnlrja5K9jcyHrohAwK6fQmpkr1I_5YxkOHBu5Q
 
 [everonletrongtan.com]
 match = 19.0%%
@@ -54,7 +54,7 @@ url = https://everonletrongtan.com/bo-chan-ga-goi-everon-lite-eve14
 [foreverbedding.net]
 match = -33.3%%
 title = Bộ ga chun Velina V14 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v14
+url = https://foreverbedding.net/bo-ga-chun-velina-v14?srsltid=AfmBOoqVQePOn3B15vfH3bCKMBlff52O6iw9e1T8o5AQnAgsgeYJqe24
 
 [changmibedding.com]
 match = -33.3%%
