--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-22 23:45:33
+lastsearch = 2024-07-23 00:48:06
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -42,13 +42,13 @@ title =
 url = https://www.ateezstoryline.com/ateez
 
 [www.youtube.com]
-match = -88.2%%
-title = Don't Think Twice, It's Alright -- Lesson
-url = https://www.youtube.com/watch?v=NNVYwE-KGkQ
+match = 17.6%%
+title = iKON - 'I'M OK' M/V
+url = https://www.youtube.com/watch?v=yqszm7AnX-4
 
 [www.tiktok.com]
-match = 20.0%%
-title = This song 😫💔#chan🎵🎶🎧
+match = 0.0%%
+title = This song 😫💔#chan🎵🎶🎧 | this song
 url = https://www.tiktok.com/@channnmusicc/video/7204044061546794267
 
 [www.psl.noaa.gov]
