--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-22 21:44:11
+lastsearch = 2024-07-23 00:48:18
 
 [www.instagram.com]
-match = -161.5%%
-title = (@katrinacyt) • Instagram photos and videos
-url = https://www.instagram.com/katrinacyt/
+match = -46.2%%
+title = Ke Huy Quan (@kehuyquan)
+url = https://www.instagram.com/kehuyquan/?hl=en
 
 [hk.linkedin.com]
 match = -100.0%%
@@ -32,9 +32,9 @@ title = Sitemap
 url = https://www.linklaters.com/en-us/sitemap
 
 [en.wikipedia.org]
-match = 0.0%%
-title = 
-url = https://en.wikipedia.org/wiki/Dior
+match = -11.1%%
+title = Fiona Sit
+url = https://en.wikipedia.org/wiki/Fiona_Sit
 
 [press.fourseasons.com]
 match = -269.2%%
@@ -305,4 +305,14 @@ url = https://www.carousell.sg/u/justforu.shop/reviews/
 match = -230.8%%
 title = South Korea: First lady's Dior bag shakes ... - BBC
 url = https://www.bbc.com/news/world-asia-68090638
+
+[www.straitstimes.com]
+match = 0.0%%
+title = 
+url = https://www.straitstimes.com/asia/east-asia/prosecution-probes-south-korea-s-first-lady-on-dior-bag-scandal-alleged-stock-manipulation
+
+[www.lofficielmalaysia.com]
+match = -284.6%%
+title = Dior unveiled the Lady Dior Celebration exhibition in Seoul
+url = https://www.lofficielmalaysia.com/fashion/dior-unveiled-the-lady-dior-celebration-in-seoul-jisoo-jimin-seongsu-eunwoo
 
