--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-22 23:40:00
+lastsearch = 2024-07-23 00:47:02
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -89,7 +89,7 @@ url = http://htlight.vn/
 [m.facebook.com]
 match = -6.7%%
 title = Giao Thông thời VNCH
-url = https://m.facebook.com/media/set/?set=a.623598701078282&s=12
+url = https://m.facebook.com/media/set/?vanity=113958848708939&set=a.623598701078282
 
 [www.diepxuan.com]
 match = -13.3%%
@@ -127,9 +127,9 @@ title = Top 10 sản phẩm chiếu trúc tốt nhất 2019
 url = https://www.otosaigon.com/threads/top-10-san-pham-chieu-truc-tot-nhat-2019.8922499/
 
 [olm.vn]
-match = -173.3%%
-title = Một may cay buoi sang cay duoc 2/5 canh dong . ...
-url = https://olm.vn/cau-hoi/mot-may-cay-buoi-sang-cay-duoc-25-canh-dong-buoi-chieu-cay-duoc-1-3-canh-dong-hoi-con-lai-bao-nhieu-phan-canh-dong-chua-cay.62100277582
+match = -166.7%%
+title = mot san truong hinh chu nhat co chieu dai 20m ...
+url = https://olm.vn/hoi-dap/tim-kiem?id=106059789558&q=mot+san+truong+hinh+chu+nhat+co+chieu+dai+20m,chieu+rong+15m.Nguoi+ta+trong+cay+xung+quanh+san+truong,moi+cay+cach+nhau+5m.Hoi+xung+quanh+san+truong+trong+bao+nhieu+cay?
 
 [113.165.166.110:81]
 match = -206.7%%
@@ -139,7 +139,7 @@ url = http://113.165.166.110:81/bitstream/DL_134679/8043/1/CVv201S012019126.pdf
 [tanhkhong.org]
 match = -226.7%%
 title = Triệt Như - Tiếng Hát Giữa Trời - BÀI 57 SUY GẪM TỪ CÂY ...
-url = https://tanhkhong.org/p105a4256/12/triet-nhu-tieng-hat-giua-troi-bai-57-suy-gam-tu-cay-bo-de-bonsai
+url = https://tanhkhong.org/p105a4256/5/triet-nhu-tieng-hat-giua-troi-bai-57-suy-gam-tu-cay-bo-de-bonsai
 
 [forum.tkaraoke.com]
 match = -233.3%%
@@ -150,4 +150,9 @@ url = https://forum.tkaraoke.com/tkf_postsm59602_Tat-ca-cac-bai-Karaoke-cua-cac-
 match = -100.0%%
 title = UY BAN NHAN DAN THANH PHO UONG BI So
 url = https://www.quangninh.gov.vn/Lists/VanBanPhapQuy/Attachments/46520/61cv_tham gia y kien khu dan cu xen cu khu 9 pQT.signed.pdf
+
+[www.pamirabezmenphotography.com]
+match = -213.3%%
+title = Pamira Bezmen Photography | The Astorino Financial Group
+url = https://www.pamirabezmenphotography.com/blog/2020/4/the-astorino-financial-group-by-pamira-bezmen-photography
 
