--- a/images/chieu-dieu-hoa-cao-su-160x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-160x200.html
 lastopen = 2024-07-01 06:44:23
 
 [search]
-lastsearch = 2024-07-22 20:40:08
+lastsearch = 2024-07-23 00:47:55
 
 [demxanh.com]
-match = 17.2%%
-title = Chiếu điều hòa cao su non đa sắc xanh dương gấu
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xanh-duong-gau.html
+match = 34.5%%
+title = Chiếu điều hòa cao su non đa sắc tím than
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-tim-than.html
 
 [tiki.vn]
 match = 20.7%%
 title = Mua Chiếu Điều Hòa Cao Su Non Latex Loại 1 Màu
-url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=263307875
+url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=136632823
 
 [demchinhhang.com]
 match = 51.7%%
