--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-07-22 23:18:09
+lastsearch = 2024-07-23 00:44:39
 
 [www.diepxuan.com]
-match = 40.9%%
-title = Thảm giường nỉ 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-160x200.html
+match = 27.3%%
+title = Thảm giường Bode 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [demxanh.com]
 match = -22.7%%
@@ -32,9 +32,9 @@ title = Thảm trải giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm trải giường
 
 [decoviet.vn]
-match = 22.2%%
-title = Thảm Sofa Biên Hòa
-url = https://decoviet.vn/tham-sofa-bien-hoa/
+match = 23.8%%
+title = Thảm Sofa Phòng Khách
+url = https://decoviet.vn/tham-phong-khach/
 
 [www.thamvintage.vn]
 match = 12.5%%
@@ -72,9 +72,9 @@ title = Bed frame HASLEV 160x200 dark grey - JYSK.vn
 url = https://jysk.vn/en-US/bed-frame-haslev-160x200-dark-grey
 
 [blanc.vn]
-match = -81.8%%
-title = Thảm trải sàn Rustic Ghi - có tua rua cotton linen
-url = https://blanc.vn/tham-rustic-ghi-ts
+match = 9.1%%
+title = Thảm trải sàn Hira Ghi sợi đay
+url = https://blanc.vn/tham-hira-ghi-ts
 
 [noithatkenli.vn]
 match = -27.3%%
