--- a/images/tui-tuan-anh-180x200/config.ini
+++ b/images/tui-tuan-anh-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-tuan-anh-180x200.html
 lastopen = 2024-06-17 10:42:51
 
 [search]
-lastsearch = 2024-07-22 23:42:34
+lastsearch = 2024-07-23 00:44:51
 
 [www.diepxuan.com]
 match = 26.3%%
@@ -17,9 +17,9 @@ title = Đệm Lò xo túi Adaptive Tuấn Anh
 url = https://demkhangduy.com/dem-lo-xo-tui-adaptive-tuan-anh
 
 [demxanh.com]
-match = -100.0%%
-title = Đệm lò xo túi Tuấn Anh Adaptive Pocket (Cuộn) dày 25cm
-url = https://demxanh.com/dem-lo-xo-tui-tuan-anh-adaptive-pocket-cuon.html
+match = -140.0%%
+title = Mua Đệm lò xo Tuấn Anh chính hãng, giá rẻ, miễn phí vận ...
+url = https://demxanh.com/dem-lo-xo-tuan-anh.html
 
 [tuananh.vn]
 match = 10.0%%
