--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-07-22 23:53:53
+lastsearch = 2024-07-23 01:40:41
 
 [phana.com.vn]
 match = -90.9%%
@@ -37,8 +37,8 @@ title = Giường ngủ gỗ xoan 1,6m(Nệm 1,6m x2m)
 url = http://noithatdogodungduyen.com/giuong-ngu-1
 
 [shopee.vn]
-match = -272.7%%
-title = giường 1m giá tốt Tháng 7, 2024 | Mua ngay - Shopee
+match = -190.9%%
+title = giường 1m giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=giường 1m
 
 [dogodelathanhhanoi.com]
