--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-07-23 00:45:13
+lastsearch = 2024-07-23 01:37:56
 
 [www.tiktok.com]
 match = -6.2%%
@@ -230,4 +230,9 @@ url = https://www.onlineforexcommunity.com/products/rdcttnve-160/
 match = -200.0%%
 title = ^isaiiKEiiB=aiBC3niiiiaDiiiicaiK3eK=aiK^ NOT TO BE ...
 url = https://upload.wikimedia.org/wikipedia/commons/d/d8/Poems_and_Ballads_(IA_dli.granth.73288).pdf
+
+[www.amazon.com]
+match = -193.8%%
+title = 16' Above Ground Swimming Pool Solar Sun Dome Cover ...
+url = https://www.amazon.com/Ground-Swimming-Heater-Sundome-Panels/dp/B001WK6PCY
 
