--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-07-22 23:46:29
+lastsearch = 2024-07-23 01:36:27
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -27,9 +27,9 @@ title = YouTube
 url = https://www.youtube.com/watch?v=8XB2WUA6_FE
 
 [m.facebook.com]
-match = -42.9%%
-title = Fruitarian ( Raw Vegan ) | BÍ QUYẾT CHỮA CẬN THỊ ...
-url = https://m.facebook.com/groups/langantho/posts/948797575843252/
+match = -14.3%%
+title = CHỢ CƯ DÂN ECOPARK (Kênh nội bộ) | 🏠 705 Sky 2
+url = https://m.facebook.com/groups/1786488038270373/posts/3631592127093279/
 
 [www.dkn.tv]
 match = -21.4%%
@@ -37,9 +37,9 @@ title = Chiêm ngưỡng 20 viên đá rực rỡ đẹp nhất thế giới
 url = https://www.dkn.tv/van-hoa/nghe-thuat/21-loai-da-ruc-ro-gap-100-lan-kim-cuong.html
 
 [www.impehcm.org.vn]
-match = -53.6%%
-title = Bệnh sán dải heo (Taenia solium và taenia asiatica hay ...
-url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/benh-san-dai-heo-taenia-solium-va-taenia-asiatica-hay-taenia-solium-va-pork-tapeworm.html
+match = -71.4%%
+title = Giun đầu gai (Phần 1: Đại cương; Dịch tễ học; Đặc điểm hình ...
+url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/giun-dau-gai-phan-1-dai-cuong-dich-te-hoc-dac-diem-hinh-thai-hoc-va-chu-ky-phat-trien.html
 
 [www.thuocbietduoc.com.vn]
 match = -50.0%%
