--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-07-23 00:53:27
+lastsearch = 2024-07-23 01:38:05
 
 [shopee.vn]
-match = -29.6%%
-title = Chiếu Điều Hoà Cao Su Non E-cool Mịn Decor, Bộ 3 Món ...
-url = https://shopee.vn/Chiếu-Điều-Hoà-Cao-Su-Non-E-cool-Mịn-Decor-Bộ-3-Món-Chiếu-Kèm-2-Vỏ-Gối-Nằm-Mềm-Mát-Nhiều-Hoạ-Tiết-(video-ảnh-thật)-i.92165237.16324622085
+match = 51.9%%
+title = Chiếu Điều Hòa Cao Cấp Mát Lạnh
+url = https://shopee.vn/Chiếu-Điều-Hòa-Cao-Cấp-Mát-Lạnh-i.47077941.1080665024
 
 [demxanh.com]
-match = 14.8%%
-title = Sử dụng chiếu điều hòa có tốt hay không?
-url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html
+match = -14.8%%
+title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [tiki.vn]
 match = 33.3%%
@@ -22,9 +22,9 @@ title = Chiếu điều hòa có mát không? Review 10 ...
 url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [foreverbedding.net]
-match = 0.0%%
-title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
+match = -59.3%%
+title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
 
 [kyoryo.vn]
 match = -40.7%%
