--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-23 00:35:16
+lastsearch = 2024-07-23 01:39:23
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -212,9 +212,9 @@ title = Thể lệ: Cuộc thi ảnh Nghệ thuật Quốc tế lần thứ 13 t
 url = https://nhiepanhdoisong.vn/the-le-cuoc-thi-anh-nghe-thuat-quoc-te-lan-thu-13-tai-viet-nam-nam-2025-vn-25-14783.html
 
 [congcutot.vn]
-match = -100.0%%
-title = Đầu nối tuýp 3/8" lắc léo 10" 8mm LICOTA
-url = https://congcutot.vn/brand/licota-1/catalogue/865/33017.html
+match = -173.3%%
+title = Đầu tuýp 3/8" mũi vít lục giác lắc léo 8mm LICOTA
+url = https://congcutot.vn/brand/licota-1/catalogue/1013/33098.html
 
 [www.highlandscoffee.com.vn]
 match = 20.0%%
