--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-22 23:20:29
+lastsearch = 2024-07-23 01:33:40
 
 [www.galottery.com]
 match = -7.7%%
@@ -214,7 +214,7 @@ url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-f
 [books.google.com]
 match = -7.7%%
 title = Chipewyan Texts
-url = https://books.google.com/books?id=0u4SAAAAYAAJ&pg=PA147&lpg=PA147&dq=ga+ni+long+14&source=bl&ots=lQpsERznyF&sig=ACfU3U3_vDbD1yoyae01WzzIBpKIcGKcZQ&hl=en&sa=X&ved=2ahUKEwj9r8XjhruHAxXfHDQIHXOXCFQQ6AF6BAgXEAM
+url = https://books.google.com/books?id=0u4SAAAAYAAJ&pg=PA147&lpg=PA147&dq=ga+ni+long+14&source=bl&ots=lQpsESxnxG&sig=ACfU3U116GBU8CIQsLMciMCu4zMarRR_iA&hl=en&sa=X&ved=2ahUKEwj8xI7GpLuHAxU8rokEHeL-A7kQ6AF6BAgbEAM
 
 [ottawabraves.com]
 match = -292.3%%
@@ -327,9 +327,9 @@ title = Phase diagram of the binary Ga-Ni metal alloy system up to ...
 url = https://www.researchgate.net/figure/Phase-diagram-of-the-binary-Ga-Ni-metal-alloy-system-up-to-10-at-Ni-in-Ga-The-blue_fig1_356235073
 
 [www.deutschconnectorstore.com]
-match = -200.0%%
-title = Deutsch 0462-203-12141 Size 12 Contact 14-12 Ga
-url = https://www.deutschconnectorstore.com/p-85-deutsch-0462-203-12141-contact-14-12-ga.html
+match = -253.8%%
+title = 0462-209-16141 | Deutsch/TE | SIze 16 Contact 16-14 Ga
+url = https://www.deutschconnectorstore.com/p-86-deutsch-0462-209-16141-contact-16-14-ga.html
 
 [georgiadogs.com]
 match = -92.3%%
