--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-07-22 21:13:25
+lastsearch = 2024-07-23 01:41:03
 
 [us.misumi-ec.com]
 match = -350.0%%
@@ -280,4 +280,9 @@ url = https://aaseedstewards.ucdavis.edu/sites/g/files/dgvnsk12221/files/media/d
 match = -191.7%%
 title = Linda M. Burton | Berkeley Social Welfare
 url = https://socialwelfare.berkeley.edu/people/linda-m-burton
+
+[www.fsu.edu]
+match = -66.7%%
+title = Florida State University
+url = https://www.fsu.edu/
 
