--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-22 23:52:22
+lastsearch = 2024-07-23 01:45:38
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -150.0%%
-title = Trời chiều Đường Nguyễn Xiển, Tam Đa Quận 9 Sài Gòn
-url = https://www.youtube.com/watch?v=s0ykpiyh3vo
+match = -75.0%%
+title = 22/7 Rank 5 Việt Cùng Elly Lạc Lạc NĐV
+url = https://www.youtube.com/watch?v=9Dcc6K8shxU
 
 [tuyensinh247.com]
 match = -225.0%%
@@ -227,9 +227,9 @@ title = chelsea vs🍯 【WW88.game】Casino Online Châu Á
 url = https://hoanghaco.com.vn/ios/farmer_pyramid_summer/
 
 [www.facebook.com]
-match = -22.2%%
-title = Nhược Lạc
-url = https://www.facebook.com/nhuoclac.writing/
+match = 12.5%%
+title = THÔNG BÁO GAMES SHOPEE
+url = https://www.facebook.com/groups/gamesshopee/?locale=vi_VN
 
 [baocaobang.vn]
 match = -218.8%%
