CI images update

--- a/images/tham-giuong-loai-2-12/config.ini
+++ b/images/tham-giuong-loai-2-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-12.html
 lastopen = 2024-06-17 22:30:02
 
 [search]
-lastsearch = 2024-07-23 01:38:28
+lastsearch = 2024-07-23 02:17:10
 
 [shopee.vn]
-match = -52.4%%
-title = thảm trải giường giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=thảm trải giường
+match = -90.5%%
+title = Thảm trải giường - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/thảm trải giường
 
 [cafeland.vn]
 match = -100.0%%
