--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-22 20:20:46
+lastsearch = 2024-07-23 02:16:12
 
 [chanrathanhthuy.com]
-match = -3.2%%
-title = Bí quyết chọn màu sắc chăn ga gối đệm hợp phong thủy
-url = https://chanrathanhthuy.com/hoat-dong-cong-ty/bi-quyet-chon-mau-sac-chan-ga-goi-dem-hop-phong-thuy-1400.html
+match = -6.5%%
+title = Tổng hợp những mẫu chăn ga gối đẹp không nên bỏ qua
+url = https://chanrathanhthuy.com/tin-tuc/tong-hop-nhung-mau-chan-ga-goi-dep-khong-nen-bo-qua.html
 
 [demxanh.com]
-match = 32.3%%
-title = Chăn ga gối Singapore đệm tròn CIRCLE18
-url = https://demxanh.com/chan-ga-goi-singapore-dem-tron-circle18.html
+match = -16.1%%
+title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối Singapore Đế ...
+url = https://demxanh.com/top-30-mau-anh-chan-ga-goi-singapore-de-vuong-tuyet-dep-nam-2020.html
 
 [songhongonline.vn]
-match = 48.0%%
-title = Bộ chăn ga gối SH_H19 069
-url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-h19-069
+match = 50.0%%
+title = Bộ chăn ga gối SH_UC24 102
+url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-uc24-102
 
 [changagoidemsonghong.com]
 match = -29.0%%
@@ -82,9 +82,9 @@ title = Bộ chăn ga gối Cotton sọc vuông hai lớp ZH6289
 url = https://flexhouse.vn/bọ-chan-ga-goi-cotton-soc-vuong-hai-lop-zh6289
 
 [changagoidemsonghong.online]
-match = 41.9%%
-title = Bộ chăn ga gối đệm cưới giá bao nhiêu?
-url = https://changagoidemsonghong.online/chan-ga-goi-dem-cuoi-gia-bao-nhieu.html
+match = -22.6%%
+title = Những lưu ý cần nhớ khi chọn chăn ga gối Sông Hồng cưới
+url = https://changagoidemsonghong.online/nhung-luu-y-can-nho-khi-chon-chan-ga-goi-song-hong-cuoi.html
 
 [www.facebook.com]
 match = -6.5%%
