--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-23 01:39:57
+lastsearch = 2024-07-23 02:16:59
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -22,9 +22,9 @@ title = THỦ TỤC LÀM HỘ CHIẾU ĐÀI LOAN VÀ VISA NHẬP CẢN...
 url = https://roc-taiwan.org/vnsgn_en/post/79.html
 
 [shopee.vn]
-match = -42.9%%
-title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
-url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
+match = -57.1%%
+title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
+url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
 
 [www.taiwanembassy.org]
 match = -19.0%%
@@ -47,9 +47,9 @@ title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
 url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
 
 [www.facebook.com]
-match = -23.8%%
-title = Raohe Ẩm Thực Đài | Ho Chi Minh City
-url = https://www.facebook.com/RaoheAmThucDai/
+match = 28.6%%
+title = Xin chào, tôi ở Đài Loan
+url = https://www.facebook.com/toiodailoan/?locale=vi_VN
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
@@ -77,9 +77,9 @@ title = Lịch bay Đài Loan 2024 - Tra cứu chuyến bay mới nhất ...
 url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan
 
 [visana.vn]
-match = -114.3%%
-title = Trọn bộ hồ sơ, thủ tục xin visa Đài Loan mới nhất - VISANA
-url = https://visana.vn/visa-dai-loan/
+match = -119.0%%
+title = Tất tần tật những điều cần biết về visa Quan Hồng Đài Loan
+url = https://visana.vn/visa-quan-hong-dai-loan/
 
 [www.tiktok.com]
 match = -104.8%%
