--- a/images/chieu-nhua-ha-noi-14/config.ini
+++ b/images/chieu-nhua-ha-noi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-14.html
 lastopen = 2024-06-09 22:51:04
 
 [search]
-lastsearch = 2024-07-22 17:47:52
+lastsearch = 2024-07-23 02:13:59
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -12,9 +12,9 @@ title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
 
 [shopee.vn]
-match = -85.0%%
-title = Chiếu Nhựa Mai Huyền Hà Nội 1,5m , 1,6m , 1m8,1m8x3m ...
-url = https://shopee.vn/Chiếu-Nhựa-Mai-Huyền-Hà-Nội-1-5m-1-6m-1m8-1m8x3m-1m8x4m-i.81313558.12532512757
+match = -100.0%%
+title = (Giá sỉ) chiếu nhựa gập đôi tiện dụng (đủ mọi kích thước)
+url = https://shopee.vn/(Giá-sỉ)-chiếu-nhựa-gập-đôi-tiện-dụng-(đủ-mọi-kích-thước)-i.143185988.8645235023
 
 [tchome.vn]
 match = 20.0%%
@@ -32,9 +32,9 @@ title = chiếu nhựa, chiếu cói ở tại hà nội
 url = https://www.yellowpages.vn/class/490435/chiếu-nhựa,-chiếu-cói-ở_hà-nội.html
 
 [trangvangvietnam.com]
-match = -90.0%%
-title = chiếu nhựa chiếu cói chiếu tre chiếu trúc ở tại hà nội
-url = https://trangvangvietnam.com/cateprovinces/490435/chiếu-nhựa-chiếu-cói-chiếu-tre-chiếu-trúc-ở-tại-hà-nội.html
+match = -65.0%%
+title = Chiếu Nằm (Chiếu Tre, Chiếu Trúc, Chiếu Cói,..)
+url = https://trangvangvietnam.com/categories/490435/chieu-nam-(chieu-tre-chieu-truc-chieu-coi,..).html
 
 [www.sendo.vn]
 match = -35.0%%
