--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-23 00:29:53
+lastsearch = 2024-07-23 02:18:22
 
 [www.georgianicols.com]
 match = -192.3%%
@@ -540,4 +540,29 @@ url = https://www.hrsa.gov/
 match = -7.7%%
 title = Our World in Data
 url = https://ourworldindata.org/
+
+[www.federalregister.gov]
+match = 0.0%%
+title = 
+url = https://www.federalregister.gov/agencies/health-resources-and-services-administration
+
+[www.gsu.edu]
+match = -53.8%%
+title = Georgia State University
+url = https://www.gsu.edu/
+
+[www.mariettaga.gov]
+match = -84.6%%
+title = Power & Water | Marietta, GA
+url = https://www.mariettaga.gov/1503/Power-Water
+
+[www.nih.gov]
+match = -323.1%%
+title = National Institutes of Health (NIH) | Turning Discovery Into ...
+url = https://www.nih.gov/
+
+[www.kff.org]
+match = -276.9%%
+title = Medicaid Waiver Tracker: Approved and Pending Section ...
+url = https://www.kff.org/medicaid/issue-brief/medicaid-waiver-tracker-approved-and-pending-section-1115-waivers-by-state/
 
