--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-22 23:42:46
+lastsearch = 2024-07-23 02:17:35
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title =
 url = https://en.wikipedia.org/wiki/Ren_Gill
 
 [books.google.com]
-match = -440.0%%
-title = The Monasteries of the Wadi 'n Natrûn: The history of the ...
-url = https://books.google.com/books?id=_mIPAQAAMAAJ&pg=PA206&lpg=PA206&dq=man+ren+16&source=bl&ots=HlowCl07zS&sig=ACfU3U2qIA5rDACqPscwwF2AiuDfZw09-w&hl=en&sa=X&ved=2ahUKEwjhjdPvtbqHAxVYE1kFHfVJAzgQ6AF6BAgWEAM
+match = -430.0%%
+title = Proceedings of the 10th West Coast Conference on Formal ...
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfoOItna&sig=ACfU3U3RkiniaTVQQKiGbg_RTnKz7vOlhg&hl=en&sa=X&ved=2ahUKEwjb5ZWurruHAxV4EEQIHTguCykQ6AF6BAgYEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
