--- a/images/nem-caosu-lien-a-180x200x10-classic/config.ini
+++ b/images/nem-caosu-lien-a-180x200x10-classic/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-180x200x10-classic.html
 lastopen = 2024-07-02 13:17:37
 
 [search]
-lastsearch = 2024-07-23 00:35:07
+lastsearch = 2024-07-23 02:13:14
 
 [nemgiakho.com]
 match = 11.4%%
@@ -34,7 +34,7 @@ url = https://www.sieuthinem.com/ct-san-pham/30/nem-lien-a-nem-cao-su-lien-a-khu
 [demxanh.com]
 match = 5.7%%
 title = [Hot] Bảng giá nệm cao su Liên Á khuyến mãi 2024
-url = https://demxanh.com/bang-gia-nem-cao-su-lien-a-2018.html?srsltid=AfmBOoqsIxeoCbeCMY_fvl9DiS80R4xkvl-gXP4dfDKRTKa9sKPjmEYM
+url = https://demxanh.com/bang-gia-nem-cao-su-lien-a-2018.html
 
 [www.thegioinemvip.com]
 match = -8.6%%
