--- a/images/man-ren-12/config.ini
+++ b/images/man-ren-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-12.html
 lastopen = 2024-06-07 00:50:53
 
 [search]
-lastsearch = 2024-07-22 18:52:57
+lastsearch = 2024-07-23 02:29:11
 
 [www.ncbi.nlm.nih.gov]
 match = -410.0%%
@@ -27,8 +27,8 @@ title = Acupuncture Points - Ren 12
 url = https://www.acupuncture.com/education/points/ren/ren12.htm
 
 [www.facebook.com]
-match = -350.0%%
-title = REN 12 - CV 12 - The Front-Mu point of Stomach ...
+match = -410.0%%
+title = CV 12 - The Front-Mu point of Stomach! #AcupunctureRocks
 url = https://www.facebook.com/AcuProAcademy/videos/ren-12-cv-12-the-front-mu-point-of-stomach-acupuncturerocks/654368444704775/
 
 [www.journalofchinesemedicine.com]
